--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-13 [消息人士：越共新任总书记苏林下周访华会习近平](/articles/dw/1024604.md)
+
+8-13 [被扣台湾渔船部分船员获释 船长仍在押](/articles/dw/1024605.md)
+
 8-13 [中国今年第二季度外商直接投资出现负增长](/articles/dw/1024606.md)
 
 8-13 [特朗普、马斯克X平台对谈：马斯克愿为削减政府开支效力](/articles/dw/1024607.md)
@@ -596,8 +600,4 @@
 7-14 [研究：生成式人工智能在中国应用最广](/articles/dw/1024902.md)
 
 7-14 [“让游客回家去！”- 过度观光令欧洲热门城市居民不堪重负](/articles/dw/1024903.md)
-
-7-14 [陈紫娟：常玮平虽获释 家人团聚希望仍渺茫](/articles/dw/1024904.md)
-
-7-14 [白俄罗斯与中国渐行渐近 后果会怎样？](/articles/dw/1024905.md)
 
