--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-14 [中国释放四名涉嫌越界违规捕鱼台湾渔民，但船长仍遭留置查处](/articles/voa/1013376.md)
+
 8-13 [中国正在加速建造军舰，为大规模军事冲突做准备](/articles/voa/1013377.md)
 
 8-13 [伊朗拒绝欧洲要求克制的呼吁，美国警告伊朗即将袭击以色列](/articles/voa/1013378.md)
@@ -598,6 +600,4 @@
 7-31 [北京不满美日2+2会议，外交部向日方“消极言行”提出抗议和交涉](/articles/voa/1013674.md)
 
 7-31 [路透：美国拟下月就外国芯片设备对华出口出台新规](/articles/voa/1013675.md)
-
-7-31 [奥斯汀称中东战争并非不可避免 寻求“降温”缓和局势](/articles/voa/1013676.md)
 
