--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-14 [莫斯科称俄军对越境乌军实施反击，基辅：战斗持续，战局在握](/articles/voa/1013374.md)
+
+8-14 [与胡平一席谈：奥林匹克精神今何在?](/articles/voa/1013375.md)
+
 8-14 [中国释放四名涉嫌越界违规捕鱼台湾渔民，但船长仍遭留置查处](/articles/voa/1013376.md)
 
 8-13 [中国正在加速建造军舰，为大规模军事冲突做准备](/articles/voa/1013377.md)
@@ -596,8 +600,4 @@
 7-31 [中共三中全会后的经济忧虑：内外双循环均熄火？](/articles/voa/1013672.md)
 
 7-31 [哈尼亚遇刺给北京的中东斡旋带来变数，中国强烈谴责暗杀行动](/articles/voa/1013673.md)
-
-7-31 [北京不满美日2+2会议，外交部向日方“消极言行”提出抗议和交涉](/articles/voa/1013674.md)
-
-7-31 [路透：美国拟下月就外国芯片设备对华出口出台新规](/articles/voa/1013675.md)
 
