--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-14 [波兰签约百亿美元，购买美国阿帕奇攻击直升飞机](/articles/voa/1013371.md)
+
 8-14 [巴黎奥运会两性别争议拳手夺金牌 华语圈舆论反应大不同](/articles/voa/1013372.md)
 
 8-14 [日本自民党总裁选举将如何影响中日台三角关系？](/articles/voa/1013373.md)
@@ -598,6 +600,4 @@
 8-1 [印中经贸关系升温，但边界局势紧张未见缓和](/articles/voa/1013669.md)
 
 7-31 [驻日美军指挥结构升级 专家:有效威慑中共侵台](/articles/voa/1013670.md)
-
-7-31 [哈尼亚被斩首后，美中和中东各方纷纷表态，布林肯呼吁推动加沙停火](/articles/voa/1013671.md)
 
