--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-14 [泽连斯基：乌军已控制库尔斯克州74个定居点；拜登：每隔四五小时便得到一次有关乌军行动的汇报](/articles/voa/1013358.md)
+
 8-14 [涉嫌网络犯罪头目被引渡至美国](/articles/voa/1013359.md)
 
 8-14 [芯片走私助长中国军事AI实力 美国对华芯片管制效力遭检视](/articles/voa/1013360.md)
@@ -598,6 +600,4 @@
 8-1 [美参议员跨党推出《与台湾站在一起法案》，以全面经济制裁遏阻中国侵台](/articles/voa/1013656.md)
 
 8-1 [盟友施压，委内瑞拉的马杜罗要求最高法院审计总统选举](/articles/voa/1013657.md)
-
-8-1 [一名美国退伍军人因参与委内瑞拉未遂政变在纽约被逮捕](/articles/voa/1013658.md)
 
