--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-14 [華為擬推AI晶片挑戰英偉達 擺脫美國枷鎖](/articles/dw/1024602.md)
+
 8-13 [突袭俄罗斯，乌克兰意欲何为？](/articles/dw/1024603.md)
 
 8-13 [消息人士：越共新任总书记苏林下周访华会习近平](/articles/dw/1024604.md)
@@ -598,6 +600,4 @@
 7-14 [走线美国人数暴涨 他们为何急着润?](/articles/dw/1024900.md)
 
 7-14 [美国前总统特朗普遇刺右耳受伤 各国领导人谴责暴力](/articles/dw/1024901.md)
-
-7-14 [研究：生成式人工智能在中国应用最广](/articles/dw/1024902.md)
 
