--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-14 [美国批准对以色列200亿美元军售](/articles/voa/1013356.md)
+
 8-14 [民主党人斗志昂扬，但哈里斯能赢吗？](/articles/voa/1013357.md)
 
 8-14 [泽连斯基：乌军已控制库尔斯克州74个定居点；拜登：每隔四五小时便得到一次有关乌军行动的汇报](/articles/voa/1013358.md)
@@ -598,6 +600,4 @@
 8-1 [中国新任“战狼”大使赴柬埔寨,超级大国竞争拉开帷幕](/articles/voa/1013654.md)
 
 8-1 [乌克兰接收第一批F-16战斗机](/articles/voa/1013655.md)
-
-8-1 [美参议员跨党推出《与台湾站在一起法案》，以全面经济制裁遏阻中国侵台](/articles/voa/1013656.md)
 
