--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-14 [旧金山市长选举：“拉拢”华裔选民成关键](/articles/nyt/1042480.md)
+
 8-14 [特朗普与马斯克对谈：混乱的开场，缺乏重点的对话](/articles/nyt/1042481.md)
 
 8-14 [为何中俄频繁进行挑衅性联合军事演习](/articles/nyt/1042482.md)
@@ -598,6 +600,4 @@
 5-13 [中国经济走入死胡同对全世界都是坏消息](/articles/nyt/1042778.md)
 
 5-13 [iPhone为何中国制造？](/articles/nyt/1042779.md)
-
-5-13 [从中国到世界，在痛苦与绝望中追寻希望](/articles/nyt/1042780.md)
 
