--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-14 [岸田文雄放弃竞选连任自民党总裁，将于9月卸任日本首相](/articles/voa/1013355.md)
+
 8-14 [美国批准对以色列200亿美元军售](/articles/voa/1013356.md)
 
 8-14 [民主党人斗志昂扬，但哈里斯能赢吗？](/articles/voa/1013357.md)
@@ -598,6 +600,4 @@
 8-1 [加拿大军舰通过台湾海峡 中国指其“破坏和平稳定”](/articles/voa/1013653.md)
 
 8-1 [中国新任“战狼”大使赴柬埔寨,超级大国竞争拉开帷幕](/articles/voa/1013654.md)
-
-8-1 [乌克兰接收第一批F-16战斗机](/articles/voa/1013655.md)
 
