--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-14 [【404文库】互联网大观｜某小区发通知：今后不得妄议物业公司](/articles/cdt/337985.md)
+
 8-14 [每日一语 2024.8.13](/articles/cdt/338018.md)
 
 8-14 [每日电影漫谈｜已经不存在现实主义电影的土壤了](/articles/cdt/338022.md)
@@ -598,6 +600,4 @@
 7-8 [【404文库】“2014年到2024年，仅仅十年而已”（外二篇）](/articles/cdt/339105.md)
 
 7-6 [建设性意见｜美军十几辆卡车偷叙利亚的小麦，是要烙大饼给国庆献礼吗？](/articles/cdt/339111.md)
-
-7-6 [阜成门六号院｜这一波经济周期变幻，受伤害最大的是8090后一代](/articles/cdt/339114.md)
 
