--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-14 [日本首相岸田文雄放弃角逐自民党總裁](/articles/dw/1024600.md)
+
+8-14 [巴厘岛计划征收旅游税以资助环境修复](/articles/dw/1024601.md)
+
 8-14 [華為擬推AI晶片挑戰英偉達 擺脫美國枷鎖](/articles/dw/1024602.md)
 
 8-13 [突袭俄罗斯，乌克兰意欲何为？](/articles/dw/1024603.md)
@@ -596,8 +600,4 @@
 7-15 [分析：川普遇刺會否撼動美國大選？](/articles/dw/1024898.md)
 
 7-14 [特朗普枪击案现场都发生了什么？](/articles/dw/1024899.md)
-
-7-14 [走线美国人数暴涨 他们为何急着润?](/articles/dw/1024900.md)
-
-7-14 [美国前总统特朗普遇刺右耳受伤 各国领导人谴责暴力](/articles/dw/1024901.md)
 
