--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-14 [【404文库】澎湃新闻｜潜江市长要求杜绝行政诉讼败诉发生，去年当地行诉案仅1件败诉](/articles/cdt/337978.md)
+
+8-14 [【异闻观止】国家安全部｜境外反华势力渗透我青年学生群体](/articles/cdt/337980.md)
+
 8-14 [就叫熊太行也行｜千挑万选接班人，选中一个精神病](/articles/cdt/337982.md)
 
 8-14 [【404文库】互联网大观｜某小区发通知：今后不得妄议物业公司](/articles/cdt/337985.md)
@@ -596,8 +600,4 @@
 7-7 [Lola｜边疆、民族与宗教：国歌不会唱，就不是中国人了](/articles/cdt/339095.md)
 
 7-7 [西门读书｜乾隆：他一个人导演了从盛世到萧条的大戏](/articles/cdt/339097.md)
-
-7-7 [【404文库】丹江湖上钓鱼翁｜繁华渐逝：腹背受敌的中国经济（3万字长文）](/articles/cdt/339098.md)
-
-7-8 [【404文库】“2014年到2024年，仅仅十年而已”（外二篇）](/articles/cdt/339105.md)
 
