--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-14 [港狱中民运人士邹家成及律师因将投诉信带离监狱获刑三天及罚款](/articles/voa/1013349.md)
+
 8-14 [乌军在俄罗斯本土扩大战果，俄罗斯又一州宣布进入紧急状态](/articles/voa/1013350.md)
 
 8-14 [菲律宾称将重新评估与中国在第二托马斯浅滩的临时性协议](/articles/voa/1013351.md)
@@ -598,6 +600,4 @@
 8-1 [中国撤销制裁美企卫讯 分析: 其远洋通讯服务无可替代](/articles/voa/1013647.md)
 
 8-1 [路透社：前朝鲜外交官称若特朗普再次当选，平壤或愿与美国重启核谈判](/articles/voa/1013648.md)
-
-8-1 [PMI调查显示前景堪忧 中国制造业面临“残酷夏天”](/articles/voa/1013649.md)
 
