--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-15 [分析：岸田文雄重塑日本外交政策，但国内声望却持续低迷](/articles/voa/1013343.md)
+
+8-15 [美海军在印太部署最新型超远程空对空导弹，重新主导投射优势](/articles/voa/1013344.md)
+
 8-15 [外资撤离、石油需求降低 分析:中国经济短期内未见解方](/articles/voa/1013345.md)
 
 8-15 [日本议员团关心“台海有事” 愿强化日台安全交流频率](/articles/voa/1013346.md)
@@ -596,8 +600,4 @@
 8-2 [巴基斯坦瓜达尔爆发大规模抗议令北京担忧当地安全局势](/articles/voa/1013641.md)
 
 8-2 [美俄进行历史性的大规模换囚行动，拜登感谢多个盟国协助促成此事](/articles/voa/1013642.md)
-
-8-2 [中俄联手试图将美国排挤出亚太？](/articles/voa/1013643.md)
-
-8-1 [南京一开发商破天荒同意退还烂尾楼首付房款，能否成为样板仍未知](/articles/voa/1013644.md)
 
