--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-15 [中国外长王毅会晤缅甸军政府领导人](/articles/voa/1013341.md)
+
+8-15 [世卫组织宣布猴痘为国际关注的突发公共卫生事件](/articles/voa/1013342.md)
+
 8-15 [分析：岸田文雄重塑日本外交政策，但国内声望却持续低迷](/articles/voa/1013343.md)
 
 8-15 [美海军在印太部署最新型超远程空对空导弹，重新主导投射优势](/articles/voa/1013344.md)
@@ -596,8 +600,4 @@
 8-2 [哈马斯领导人被刺后，中国在中东影响力面临考验](/articles/voa/1013639.md)
 
 8-2 [习近平在中共建军节前大谈边海空防御能力，中国周边领土纠纷或将加剧](/articles/voa/1013640.md)
-
-8-2 [巴基斯坦瓜达尔爆发大规模抗议令北京担忧当地安全局势](/articles/voa/1013641.md)
-
-8-2 [美俄进行历史性的大规模换囚行动，拜登感谢多个盟国协助促成此事](/articles/voa/1013642.md)
 
