--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,20 @@
 美国之音
 ------
 
+8-15 [泰国宪法法院罢免总理赛塔,美国称希望“尽快”选出新总理。](/articles/voa/1013332.md)
+
+8-15 [禾赛科技据报将从五角大楼黑名单除名 美国会共和党人: “这是送给一个由中共控制的公司的礼物”](/articles/voa/1013333.md)
+
+8-15 [巴西总统卢拉对与中国的“长期伙伴关系”表示认可](/articles/voa/1013334.md)
+
+8-15 [白宫表示对以-哈停火谈判抱有信心](/articles/voa/1013335.md)
+
+8-15 [前乌军总参发言人：乌军在俄境推进，情报工作与“海马斯”功不可没](/articles/voa/1013336.md)
+
+8-15 [泽连斯基：乌军在俄库尔斯克地区“进一步推进”](/articles/voa/1013337.md)
+
+8-15 [联合国报告指责缅甸军方犯下战争罪和危害人类罪](/articles/voa/1013338.md)
+
 8-15 [中国当局以前所未有的力度封杀网上有关盗卖尸体丑闻的话题和讨论](/articles/voa/1013339.md)
 
 8-15 [专家：越南新领导人上任后其外交平衡“没有改变”](/articles/voa/1013340.md)
@@ -586,18 +600,4 @@
 8-2 [中俄两国引领对美国“前所未有”情报威胁的浪潮](/articles/voa/1013630.md)
 
 8-2 [面临关税的中国电动汽车制造商仍在取得进展](/articles/voa/1013631.md)
-
-8-2 [中国和主要民主国家加强在太平洋地区的竞争](/articles/voa/1013632.md)
-
-8-2 [美参院表决内含避免美台双重课税的法案因程序问题未能推进立法](/articles/voa/1013633.md)
-
-8-2 [越南与菲律宾海警将在南中国海联合训练](/articles/voa/1013634.md)
-
-8-2 [以色列称已打死10月7日袭击事件的主要策划者穆罕默德·迪夫](/articles/voa/1013635.md)
-
-8-2 [多名美国人在美-俄换囚中获释，其中包括两名美国记者](/articles/voa/1013636.md)
-
-8-2 [北京卷入兴奋剂丑闻之际，中国网民指控美国运动员服用禁药](/articles/voa/1013637.md)
-
-8-2 [中国推“网证网号” 负评如潮也挡不住](/articles/voa/1013638.md)
 
