--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-15 [岭南酷儿Lingnan queer｜无法挣脱的暗网：性少数扭转“治疗”](/articles/cdt/337971.md)
+
+8-15 [界面文化｜最听话的孩子们，长大后成为了极权最忠实的帮凶](/articles/cdt/337975.md)
+
 8-14 [【404文库】澎湃新闻｜潜江市长要求杜绝行政诉讼败诉发生，去年当地行诉案仅1件败诉](/articles/cdt/337978.md)
 
 8-14 [【异闻观止】国家安全部｜境外反华势力渗透我青年学生群体](/articles/cdt/337980.md)
@@ -596,8 +600,4 @@
 7-8 [麦杰逊｜新京报这次把5位大佬得罪了](/articles/cdt/339077.md)
 
 7-8 [新京报｜罐车运输乱象调查：卸完煤制油直接装运食用大豆油](/articles/cdt/339079.md)
-
-7-8 [每日一语 2024.7.7](/articles/cdt/339081.md)
-
-7-7 [Lola｜边疆、民族与宗教：国歌不会唱，就不是中国人了](/articles/cdt/339095.md)
 
