--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-15 [黑噪音｜养老金，将于2035年耗尽](/articles/cdt/337947.md)
+
 8-15 [每日一语 2024.8.14](/articles/cdt/337951.md)
 
 8-15 [岭南酷儿Lingnan queer｜无法挣脱的暗网：性少数扭转“治疗”](/articles/cdt/337971.md)
@@ -598,6 +600,4 @@
 7-8 [往事与随想｜墙国](/articles/cdt/339073.md)
 
 7-8 [财话连篇｜没有道歉！没有召回！中储粮回应罐车混用，网友呼吁严惩判刑](/articles/cdt/339075.md)
-
-7-8 [麦杰逊｜新京报这次把5位大佬得罪了](/articles/cdt/339077.md)
 
