--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,6 +9,8 @@
 
 8-15 [岭南酷儿Lingnan queer｜无法挣脱的暗网：性少数扭转“治疗”](/articles/cdt/337971.md)
 
+8-15 [星球商业评论｜富士康来都来了](/articles/cdt/337973.md)
+
 8-15 [界面文化｜最听话的孩子们，长大后成为了极权最忠实的帮凶](/articles/cdt/337975.md)
 
 8-14 [【404文库】澎湃新闻｜潜江市长要求杜绝行政诉讼败诉发生，去年当地行诉案仅1件败诉](/articles/cdt/337978.md)
@@ -598,6 +600,4 @@
 7-8 [多思考一点｜叙利亚的小麦和油罐车混用哪个更值得关注？](/articles/cdt/339070.md)
 
 7-8 [往事与随想｜墙国](/articles/cdt/339073.md)
-
-7-8 [财话连篇｜没有道歉！没有召回！中储粮回应罐车混用，网友呼吁严惩判刑](/articles/cdt/339075.md)
 
