--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-15 [蔡照明透视｜张教授如何评价洞庭湖决口？](/articles/cdt/337942.md)
+
+8-15 [那些原本是废话的常识｜一个地方宜居与否，老天给了什么不重要，重要的是人](/articles/cdt/337945.md)
+
 8-15 [黑噪音｜养老金，将于2035年耗尽](/articles/cdt/337947.md)
 
 8-15 [每日一语 2024.8.14](/articles/cdt/337951.md)
@@ -596,8 +600,4 @@
 7-8 [黑柳丁｜人心一旦凉了，就暖不回来了！](/articles/cdt/339065.md)
 
 7-8 [古老板的老巢｜中储油，为什么不道歉？](/articles/cdt/339067.md)
-
-7-8 [多思考一点｜叙利亚的小麦和油罐车混用哪个更值得关注？](/articles/cdt/339070.md)
-
-7-8 [往事与随想｜墙国](/articles/cdt/339073.md)
 
