--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-15 [帕劳总统指责中国“将旅游业武器化”](/articles/dw/1024588.md)
+
+8-15 [哥伦比亚大学校长宣布辞职](/articles/dw/1024589.md)
+
+8-15 [日本投降日：日本多名内阁成员参拜靖国神社](/articles/dw/1024590.md)
+
 8-15 [饮用水疑似遭投毒 德国关闭两处军事基地](/articles/dw/1024591.md)
 
 8-15 [投资“未来领域”：印总理莫迪见富士康董事长](/articles/dw/1024592.md)
@@ -594,10 +600,4 @@
 7-16 [川普正式獲共和黨提名 副手萬斯是誰？](/articles/dw/1024886.md)
 
 7-15 [消息人士：意大利和西班牙赞同欧盟对华电动汽车关税](/articles/dw/1024887.md)
-
-7-15 [缅甸战火重开 新增两支少数民族劲旅](/articles/dw/1024888.md)
-
-7-15 [拜登健康疑虑加深 选前风波不断](/articles/dw/1024889.md)
-
-7-15 [中国请求WTO设专家组解决与美国贸易争端](/articles/dw/1024890.md)
 
