--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-16 [中国将限制锑出口，该矿物质可用于电池和武器](/articles/voa/1013315.md)
+
+8-16 [美国继续打击胡塞武装和真主党贸易网，制裁对象包括一家香港船运公司及其油轮](/articles/voa/1013316.md)
+
 8-16 [北京将中国货轮损毁波罗的海油气管道归咎于“意外风暴”，当地人仍怀疑“蓄意破坏”](/articles/voa/1013317.md)
 
 8-16 [加沙停火谈判人员希望达成停火协议，避免中东陷入更大规模战争](/articles/voa/1013318.md)
@@ -596,8 +600,4 @@
 8-3 [克里姆林宫：美俄换囚与俄乌和谈无关](/articles/voa/1013613.md)
 
 8-3 [美国7月份就业增长放缓，失业率上升](/articles/voa/1013614.md)
-
-8-3 [复旦大学布达佩斯校区恐成中国的又一个“国际烂尾工程”？](/articles/voa/1013615.md)
-
-8-3 [尼泊尔议员谴责中国大使陈松在社交媒体上发表不当言论 要求对其采取行动](/articles/voa/1013616.md)
 
