--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-16 [从东南亚到太平洋 北京强化战略布局 试图建立“与美国平行的国际秩序”？](/articles/voa/1013314.md)
+
 8-16 [中国将限制锑出口，该矿物质可用于电池和武器](/articles/voa/1013315.md)
 
 8-16 [美国继续打击胡塞武装和真主党贸易网，制裁对象包括一家香港船运公司及其油轮](/articles/voa/1013316.md)
@@ -598,6 +600,4 @@
 8-3 [美司法部对TikTok及母公司提起民事诉讼，指控其非法收集儿童数据](/articles/voa/1013612.md)
 
 8-3 [克里姆林宫：美俄换囚与俄乌和谈无关](/articles/voa/1013613.md)
-
-8-3 [美国7月份就业增长放缓，失业率上升](/articles/voa/1013614.md)
 
