--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-16 [泽连斯基：乌军全面控制苏贾镇；美国安会：初步报告显示部分俄军前线部队调往库尔斯克](/articles/voa/1013313.md)
+
 8-16 [从东南亚到太平洋 北京强化战略布局 试图建立“与美国平行的国际秩序”？](/articles/voa/1013314.md)
 
 8-16 [中国将限制锑出口，该矿物质可用于电池和武器](/articles/voa/1013315.md)
@@ -598,6 +600,4 @@
 8-3 [在委内瑞拉，中国为什么支持马杜罗？](/articles/voa/1013611.md)
 
 8-3 [美司法部对TikTok及母公司提起民事诉讼，指控其非法收集儿童数据](/articles/voa/1013612.md)
-
-8-3 [克里姆林宫：美俄换囚与俄乌和谈无关](/articles/voa/1013613.md)
 
