--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-16 [白宫:最新加沙停火会谈有着“很有希望的开端”](/articles/voa/1013310.md)
+
+8-16 [泰国执政联盟提名前总理他信之女帕东坦·西那瓦为新总理](/articles/voa/1013311.md)
+
+8-16 [帕劳总统指责中国“将旅游业武器化”来针对台湾](/articles/voa/1013312.md)
+
 8-16 [泽连斯基：乌军全面控制苏贾镇；美国安会：初步报告显示部分俄军前线部队调往库尔斯克](/articles/voa/1013313.md)
 
 8-16 [从东南亚到太平洋 北京强化战略布局 试图建立“与美国平行的国际秩序”？](/articles/voa/1013314.md)
@@ -594,10 +600,4 @@
 8-3 [被中国制裁的美国众议员麦戈尔：这是我的“荣誉勋章”](/articles/voa/1013608.md)
 
 8-3 [美国拒绝了越南提出的将其认定为“市场经济”的要求](/articles/voa/1013609.md)
-
-8-3 [哈里斯已获得足够成为民主党总统候选人的党代表票数](/articles/voa/1013610.md)
-
-8-3 [在委内瑞拉，中国为什么支持马杜罗？](/articles/voa/1013611.md)
-
-8-3 [美司法部对TikTok及母公司提起民事诉讼，指控其非法收集儿童数据](/articles/voa/1013612.md)
 
