--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-16 [中国自动驾驶公司文远知行将在美国上市](/articles/nyt/1042475.md)
+
 8-15 [岸田文雄辞任日本首相，自民党该如何赢回民众信任？](/articles/nyt/1042476.md)
 
 8-15 [在“苹果城”制造电动汽车，富士康有何竞争力？](/articles/nyt/1042477.md)
@@ -598,6 +600,4 @@
 5-14 [拜登下令关闭一家中国比特币矿场，靠近美空军基地](/articles/nyt/1042773.md)
 
 5-14 [英国指控三人协助香港情报部门从事间谍活动](/articles/nyt/1042774.md)
-
-5-14 [当中国公民在美国买房被视为国家安全威胁](/articles/nyt/1042775.md)
 
