--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-16 [台湾又发生一次强震，暂未听说造成损害](/articles/voa/1013305.md)
+
+8-16 [前澳大利亚总理称台湾是“中国的不动产” 佩洛西严厉批评：“愚蠢、荒谬”](/articles/voa/1013306.md)
+
+8-16 [万斯和沃尔兹同意10月1日进行副总统辩论；哈里斯提出与特朗普进行两场辩论](/articles/voa/1013307.md)
+
 8-16 [拜登关于委内瑞拉的评论引发对美国政策的疑问](/articles/voa/1013308.md)
 
 8-16 [菲律宾空军基地升级有望对中国的咄咄逼人行动起到遏阻作用](/articles/voa/1013309.md)
@@ -594,10 +600,4 @@
 8-3 [马克龙赞扬奥运会开幕式的“大胆”及捍卫艺术自由](/articles/voa/1013603.md)
 
 8-3 [连环刺杀或将引爆中东火药桶，以色列面临多线战争的挑战](/articles/voa/1013604.md)
-
-8-3 [防范伊朗可能采取的军事行动，美国向中东增派军力](/articles/voa/1013605.md)
-
-8-3 [香港新闻自由倡导者对黎智英审判拖延感到绝望](/articles/voa/1013606.md)
-
-8-3 [国防部长奥斯汀撤销与9/11恐袭主谋达成的控辩协议](/articles/voa/1013607.md)
 
