--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 8-16 [独角鲸工作坊｜离婚，越来越难了](/articles/cdt/337928.md)
 
+8-16 [人物杂志｜一个县的教育反内卷实验](/articles/cdt/337929.md)
+
 8-16 [大象公社｜今天这样的生活，其实才过上没几年…](/articles/cdt/337931.md)
 
 8-16 [【404文库】张3丰的世界｜劳东燕教授回国：真正的远方就在脚下](/articles/cdt/337933.md)
@@ -598,6 +600,4 @@
 7-9 [人民路56号｜调查记者都快灭绝了，我们还吃不上一口放心油](/articles/cdt/339042.md)
 
 7-9 [【404文库】建设性意见｜洪水来了，是堵住大堤重要，还是堵人们的嘴重要？](/articles/cdt/339048.md)
-
-7-8 [每日一语 2024.7.8](/articles/cdt/339055.md)
 
