--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-16 [“她为什么不参选？”格温·沃尔兹，能力超群的政治家配偶](/articles/nyt/1042471.md)
+
 8-16 [关于时报对神韵艺术团的调查，你需要知道的五个要点](/articles/nyt/1042472.md)
 
 8-16 [关于法轮功运动，你应该了解的](/articles/nyt/1042473.md)
@@ -598,6 +600,4 @@
 5-15 [英国外交部召见中国大使，就香港情报部门活动作出谴责](/articles/nyt/1042769.md)
 
 5-15 [中国是如何在汽车和太阳能电池板领域引领世界的](/articles/nyt/1042770.md)
-
-5-15 [普京将再次访华，中俄“没有止境”的伙伴关系面临考验](/articles/nyt/1042771.md)
 
