--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-16 [他信之女帕东坦·西那瓦被选为泰国新总理](/articles/voa/1013302.md)
+
 8-16 [中国将对入境人员和货物进行猴痘病毒筛检](/articles/voa/1013303.md)
 
 8-16 [TikTok称美司法部错误陈述其与中国政府关系](/articles/voa/1013304.md)
@@ -598,6 +600,4 @@
 8-3 [巴黎奥运会拳击擂台激战 场外“性别争议”吵得火热](/articles/voa/1013600.md)
 
 8-3 [越南国家主席苏林出任越共总书记](/articles/voa/1013601.md)
-
-8-3 [从历史性换囚中获释，俄罗斯反对派亚辛抵德、潜伏特工返莫斯科](/articles/voa/1013602.md)
 
