--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-16 [中国多地开展“不明原因肺炎”应急演练引发网民热议](/articles/voa/1013299.md)
+
+8-16 [越南新领导人苏林下周访问中国 着眼铁路建设](/articles/voa/1013300.md)
+
 8-16 [中国经济困境下 求职若渴的中国年轻人成为诈骗集团目标](/articles/voa/1013301.md)
 
 8-16 [他信之女帕东坦·西那瓦被选为泰国新总理](/articles/voa/1013302.md)
@@ -596,8 +600,4 @@
 8-3 [TikTok成美国总统大选利器 前景柳暗花明？](/articles/voa/1013597.md)
 
 8-3 [多国外交官推动委内瑞拉有争议的选举取得进展](/articles/voa/1013598.md)
-
-8-3 [特朗普同意在福克斯新闻与哈里斯进行辩论](/articles/voa/1013599.md)
-
-8-3 [巴黎奥运会拳击擂台激战 场外“性别争议”吵得火热](/articles/voa/1013600.md)
 
