--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-16 [史上最年轻：佩通坦当选泰国新一届总理](/articles/dw/1024583.md)
+
+8-16 [希腊大火逼近雅典 火势凶猛 居民疏散](/articles/dw/1024584.md)
+
 8-16 [悬念大师：纪念希区柯克诞辰125周年](/articles/dw/1024585.md)
 
 8-16 [阿里巴巴发布最新季度财报 净利润同比下降29%](/articles/dw/1024586.md)
@@ -596,8 +600,4 @@
 7-16 [美国联邦法官驳回特朗普机密文件案](/articles/dw/1024881.md)
 
 7-16 [媒体：俄分享对付美国武器经验给中国？美国会担忧](/articles/dw/1024882.md)
-
-7-16 [客座评论：给习近平“戴高帽子”能成功吗？](/articles/dw/1024883.md)
-
-7-16 [油罐車、鼠頭連發 中國食安出了什麼問題？](/articles/dw/1024884.md)
 
