--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-16 [希音想要在欧上市 欧盟前高官当顾问](/articles/dw/1024578.md)
+
+8-16 [印度将在争议地区克什米尔举行议会选举](/articles/dw/1024579.md)
+
+8-16 [美国务院批准向德国出售600枚“爱国者”导弹](/articles/dw/1024580.md)
+
 8-16 [北溪管道：天然气、政治与战争](/articles/dw/1024581.md)
 
 8-16 [印度女医生在医院遭奸杀 抗议浪潮蔓延全国](/articles/dw/1024582.md)
@@ -594,10 +600,4 @@
 7-16 [在特朗普提名大会上的德国议员：美国仍是欧洲的安全保障](/articles/dw/1024876.md)
 
 7-16 [将特朗普置于“靶心”？枪击案后拜登承认用词有误](/articles/dw/1024877.md)
-
-7-16 [特朗普若当选 中国将成为“最大敌人”？](/articles/dw/1024878.md)
-
-7-16 [欧委会部分抵制匈牙利任欧盟轮值主席国 欧尔班质疑欧盟路线](/articles/dw/1024879.md)
-
-7-16 [长平观察：“吃进去有毒，说出来有罪”](/articles/dw/1024880.md)
 
