--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-16 [参与黎智英案的英国法官辞去“媒体自由联盟”专家小组主席职](/articles/voa/1013296.md)
+
+8-16 [中国和沙特七月份成为俄罗斯燃油产品的最大进口国](/articles/voa/1013297.md)
+
+8-16 [美国会资深议员：美国与澳大利亚准备联合生产高超音速导弹](/articles/voa/1013298.md)
+
 8-16 [中国多地开展“不明原因肺炎”应急演练引发网民热议](/articles/voa/1013299.md)
 
 8-16 [越南新领导人苏林下周访问中国 着眼铁路建设](/articles/voa/1013300.md)
@@ -594,10 +600,4 @@
 8-3 [乌军袭击俄境内目标，一个军用机场和三个州油库被摧毁](/articles/voa/1013594.md)
 
 8-3 [以色列空袭约旦河西岸一辆汽车，又一名哈马斯指挥官等五人被炸死](/articles/voa/1013595.md)
-
-8-3 [专访蔡慎坤：一场攸关国运的世纪豪赌 – 中国电动汽车](/articles/voa/1013596.md)
-
-8-3 [TikTok成美国总统大选利器 前景柳暗花明？](/articles/voa/1013597.md)
-
-8-3 [多国外交官推动委内瑞拉有争议的选举取得进展](/articles/voa/1013598.md)
 
