--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-17 [原侵华日军731部队成员哈尔滨谢罪 中日反应迥异](/articles/voa/1013286.md)
+
+8-17 [加沙停火调解方宣布新的“过渡提案”](/articles/voa/1013287.md)
+
 8-17 [中共文宣系统一边贪腐荒淫 一边“杀人无形”–“为习近平讲故事的人把事情搞砸了”](/articles/voa/1013288.md)
 
 8-17 [中国企图干预美国大选 推特AI“五毛”自露马脚 澳安全网络公司抓到证据](/articles/voa/1013289.md)
@@ -596,8 +600,4 @@
 8-4 [加入驻韩联合国军司令部、与菲律宾深化防卫合作 德国正扩大在亚洲的参与](/articles/voa/1013584.md)
 
 8-4 [梵蒂冈对奥运会开幕式模仿《最后的晚餐》的桥段感到被冒犯](/articles/voa/1013585.md)
-
-8-4 [被监禁的白俄罗斯诺贝尔奖得主未被纳入历史性换囚 支持者表达失望](/articles/voa/1013586.md)
-
-8-4 [中国推促消费政策 拟扩大“免签朋友圈”、改善消费环境](/articles/voa/1013587.md)
 
