--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-17 [每日一语 2024.8.15](/articles/cdt/337919.md)
+
 8-17 [每日一语 2024.8.16](/articles/cdt/337922.md)
 
 8-16 [极昼工作室｜19岁大学生兼职骑手，消失在外墙砖下](/articles/cdt/337927.md)
@@ -598,6 +600,4 @@
 7-10 [【网络民议】洞庭湖大堤决口合龙，救灾现场变表演舞台](/articles/cdt/339036.md)
 
 7-9 [六神磊磊读金庸｜​这油，我从小喝到大](/articles/cdt/339038.md)
-
-7-9 [人民路56号｜调查记者都快灭绝了，我们还吃不上一口放心油](/articles/cdt/339042.md)
 
