--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-17 [【404文库】卖杏花｜所以，连运动员都不能批评了？](/articles/cdt/337912.md)
+
 8-17 [每日一语 2024.8.15](/articles/cdt/337919.md)
 
 8-17 [每日一语 2024.8.16](/articles/cdt/337922.md)
+
+8-17 [【网络民议】民政部：婚姻登记新草案“离婚冷静期内任何一方可申请撤回”，网友：你直接取消离婚得了](/articles/cdt/337923.md)
 
 8-16 [极昼工作室｜19岁大学生兼职骑手，消失在外墙砖下](/articles/cdt/337927.md)
 
@@ -596,8 +600,4 @@
 7-10 [天涯行路｜​那个罐子是洗不洗的问题吗，洗了也不能装食用油吧？](/articles/cdt/339012.md)
 
 7-10 [【CDTV】高剑犁｜【高见20】谁在用“问题食油”？](/articles/cdt/339014.md)
-
-7-10 [【网络民议】洞庭湖大堤决口合龙，救灾现场变表演舞台](/articles/cdt/339036.md)
-
-7-9 [六神磊磊读金庸｜​这油，我从小喝到大](/articles/cdt/339038.md)
 
