--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-17 [【404文库】【立此存照】厦门大学｜尽快启动台湾接管准备](/articles/cdt/337910.md)
+
 8-17 [【404文库】卖杏花｜所以，连运动员都不能批评了？](/articles/cdt/337912.md)
 
 8-17 [每日一语 2024.8.15](/articles/cdt/337919.md)
@@ -598,6 +600,4 @@
 7-10 [维舟｜食用油面前人人平等](/articles/cdt/339011.md)
 
 7-10 [天涯行路｜​那个罐子是洗不洗的问题吗，洗了也不能装食用油吧？](/articles/cdt/339012.md)
-
-7-10 [【CDTV】高剑犁｜【高见20】谁在用“问题食油”？](/articles/cdt/339014.md)
 
