--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-17 [印度抗议继续  全国医生罢工](/articles/dw/1024577.md)
+
 8-16 [希音想要在欧上市 欧盟前高官当顾问](/articles/dw/1024578.md)
 
 8-16 [印度将在争议地区克什米尔举行议会选举](/articles/dw/1024579.md)
@@ -598,6 +600,4 @@
 7-16 [假如我是总统：特朗普的竞选承诺](/articles/dw/1024875.md)
 
 7-16 [在特朗普提名大会上的德国议员：美国仍是欧洲的安全保障](/articles/dw/1024876.md)
-
-7-16 [将特朗普置于“靶心”？枪击案后拜登承认用词有误](/articles/dw/1024877.md)
 
