--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-17 [古老板的老巢｜面对社保危机，政府和民众不能当鸵鸟](/articles/cdt/337895.md)
+
+8-17 [那些原本是废话的常识｜自己当年上过的当，就不要再拿来忽悠孩子了](/articles/cdt/337897.md)
+
+8-17 [小萝卜丝｜男子4年前“翻墙”看外网，近日遭处罚引争议，4年没超追诉期？](/articles/cdt/337906.md)
+
 8-17 [【404文库】【立此存照】厦门大学｜尽快启动台湾接管准备](/articles/cdt/337910.md)
 
 8-17 [【404文库】卖杏花｜所以，连运动员都不能批评了？](/articles/cdt/337912.md)
@@ -594,10 +600,4 @@
 7-10 [老萧杂说｜“油瓶子”微小叙事，已被堂皇激昂的宏大叙事收编](/articles/cdt/339001.md)
 
 7-10 [每日一语 2024.7.9](/articles/cdt/339004.md)
-
-7-10 [智谷趋势｜“5个记者顶100个市场监管局！”为什么需要调查记者，这是最好的答案](/articles/cdt/339009.md)
-
-7-10 [维舟｜食用油面前人人平等](/articles/cdt/339011.md)
-
-7-10 [天涯行路｜​那个罐子是洗不洗的问题吗，洗了也不能装食用油吧？](/articles/cdt/339012.md)
 
