--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-17 [前苏联退役航母明斯克号在南通起火，是否完全报废引人关注](/articles/voa/1013270.md)
+
 8-17 [李翘楚出狱后首发声:“让我们免于恐惧的活”](/articles/voa/1013271.md)
 
 8-17 [以色列空袭黎巴嫩南部及加沙中部 已造成数十人伤亡](/articles/voa/1013272.md)
@@ -598,6 +600,4 @@
 8-5 [金正恩出席战术弹道导弹发射车交接仪式 呼吁扩大核武力量](/articles/voa/1013568.md)
 
 8-5 [哈里斯将在几个战场州开展竞选活动前公布副总统候选人](/articles/voa/1013569.md)
-
-8-5 [财新PMI显示中国服务业活动进一步扩张 但外部需求放缓](/articles/voa/1013570.md)
 
