--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-17 [库尔斯克战斗持续 德国拟削减对乌军援](/articles/dw/1024570.md)
+
 8-17 [中国青年失业率7月升至17.1%](/articles/dw/1024571.md)
 
 8-17 [伊朗账户利用ChatGPT影响美国大选](/articles/dw/1024572.md)
@@ -598,6 +600,4 @@
 7-17 [对中国电动车征收特别关税 欧盟各国意见不一](/articles/dw/1024868.md)
 
 7-17 [IMF上调对中、印、欧经济增长预测](/articles/dw/1024869.md)
-
-7-17 [特朗普突遭枪击 目击者称：枪手就在屋顶上](/articles/dw/1024870.md)
 
