--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-18 [旧闻评论｜饭圈文化开新篇：批评全红婵要付出怎样的代价？](/articles/cdt/337891.md)
+
 8-17 [古老板的老巢｜面对社保危机，政府和民众不能当鸵鸟](/articles/cdt/337895.md)
 
 8-17 [那些原本是废话的常识｜自己当年上过的当，就不要再拿来忽悠孩子了](/articles/cdt/337897.md)
@@ -598,6 +600,4 @@
 7-10 [知灼｜“罐车混装食用油”事件，开始“毁尸灭迹”了](/articles/cdt/338999.md)
 
 7-10 [老萧杂说｜“油瓶子”微小叙事，已被堂皇激昂的宏大叙事收编](/articles/cdt/339001.md)
-
-7-10 [每日一语 2024.7.9](/articles/cdt/339004.md)
 
