--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-18 [庇护申请暂停后，美国南部边界非法入境者被捕人数大幅度下降](/articles/voa/1013267.md)
+
 8-17 [莫斯科称乌军用西方武器炸毁了库尔斯克州一座大桥](/articles/voa/1013268.md)
 
 8-17 [专访白夏：从毛泽东到习近平, 中共强人的政治逻辑](/articles/voa/1013269.md)
@@ -598,6 +600,4 @@
 8-5 [柬埔寨动工兴建中国支持的争议运河](/articles/voa/1013565.md)
 
 8-5 [聿文视界：习第三任期的新权力结构：特征明显，问题多多](/articles/voa/1013566.md)
-
-8-5 [受美国就业数据影响，亚洲股市周一暴跌](/articles/voa/1013567.md)
 
