--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 8-18 [旧闻评论｜饭圈文化开新篇：批评全红婵要付出怎样的代价？](/articles/cdt/337891.md)
 
+8-18 [【CDT报告汇】人口学家：中国别无选择，只有大规模引进移民才能解决人口危机 （外二篇）](/articles/cdt/337892.md)
+
 8-17 [古老板的老巢｜面对社保危机，政府和民众不能当鸵鸟](/articles/cdt/337895.md)
 
 8-17 [那些原本是废话的常识｜自己当年上过的当，就不要再拿来忽悠孩子了](/articles/cdt/337897.md)
@@ -598,6 +600,4 @@
 7-10 [李海鹏｜梦中的新闻业和真实的新闻业](/articles/cdt/338995.md)
 
 7-10 [知灼｜“罐车混装食用油”事件，开始“毁尸灭迹”了](/articles/cdt/338999.md)
-
-7-10 [老萧杂说｜“油瓶子”微小叙事，已被堂皇激昂的宏大叙事收编](/articles/cdt/339001.md)
 
