--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-18 [南部非洲发展共同体：南部非洲将近6800万人遭遇干旱](/articles/voa/1013262.md)
+
+8-18 [美国副总统究竟是干嘛的？你不知道的关于副总统的林林总总](/articles/voa/1013263.md)
+
 8-18 [委内瑞拉反对派抗议，选举纠纷继续拖延](/articles/voa/1013264.md)
 
 8-18 [以色列空袭打死加沙一个家庭的18名成员，斡旋方同时希望停火](/articles/voa/1013265.md)
@@ -596,8 +600,4 @@
 8-5 [欧洲半导体产业协会呼吁欧盟减少欧洲公司对外投资限制](/articles/voa/1013560.md)
 
 8-5 [孟加拉国政局突变，总理官邸沦陷 哈西娜辞职后逃亡印度](/articles/voa/1013561.md)
-
-8-5 [中共吁防“内卷式”恶性竞争 分析：口号式改革难奏效](/articles/voa/1013562.md)
-
-8-5 [着眼威慑中国，美军方看中扼守印度洋咽喉要道的澳大利亚小岛](/articles/voa/1013563.md)
 
