--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-18 [艾大荀｜看到金牌，也看到人们羞于谈起的背面](/articles/cdt/337885.md)
+
 8-18 [三月暴雨至｜结婚不需户口本，离婚还要冷静期？几十年前的婚姻法可不是这样](/articles/cdt/337887.md)
 
 8-18 [旧闻评论｜饭圈文化开新篇：批评全红婵要付出怎样的代价？](/articles/cdt/337891.md)
@@ -598,6 +600,4 @@
 7-11 [每日一语 2024.7.10](/articles/cdt/338990.md)
 
 7-11 [唐师三百手｜北大国研中心调查发现人心已变，值得引起重视](/articles/cdt/338991.md)
-
-7-10 [李海鹏｜梦中的新闻业和真实的新闻业](/articles/cdt/338995.md)
 
