--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-18 [戴维营峰会一周年 美日韩领导人重申共同应对地区挑战的承诺](/articles/voa/1013260.md)
+
+8-18 [乌克兰扎波罗核电站附近发生爆炸 IAEA示警安全状况恶化](/articles/voa/1013261.md)
+
 8-18 [南部非洲发展共同体：南部非洲将近6800万人遭遇干旱](/articles/voa/1013262.md)
 
 8-18 [美国副总统究竟是干嘛的？你不知道的关于副总统的林林总总](/articles/voa/1013263.md)
@@ -596,8 +600,4 @@
 8-6 [硕士论文惹争议，香港巴黎奥运女子重剑金牌得主江旻憓宣布退役](/articles/voa/1013558.md)
 
 8-6 [TikTok承诺永久撤回“Lite”奖励计划，欧盟宣布调查结案](/articles/voa/1013559.md)
-
-8-5 [欧洲半导体产业协会呼吁欧盟减少欧洲公司对外投资限制](/articles/voa/1013560.md)
-
-8-5 [孟加拉国政局突变，总理官邸沦陷 哈西娜辞职后逃亡印度](/articles/voa/1013561.md)
 
