--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-18 [韩防长：自主拥核将断送韩美同盟](/articles/dw/1024568.md)
+
+8-18 [中巴经济走廊为何在巴基斯坦引发大规模抗议活动？](/articles/dw/1024569.md)
+
 8-17 [库尔斯克战斗持续 德国拟削减对乌军援](/articles/dw/1024570.md)
 
 8-17 [中国青年失业率7月升至17.1%](/articles/dw/1024571.md)
@@ -596,8 +600,4 @@
 7-18 [不滿美對台軍售 北京片面暫停中美軍控談判](/articles/dw/1024866.md)
 
 7-17 [冯德莱恩连任欧委会主席没有悬念了吗？](/articles/dw/1024867.md)
-
-7-17 [对中国电动车征收特别关税 欧盟各国意见不一](/articles/dw/1024868.md)
-
-7-17 [IMF上调对中、印、欧经济增长预测](/articles/dw/1024869.md)
 
