--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-18 [火星地表下或有大量液态水](/articles/dw/1024564.md)
+
 8-18 [两名伊朗人徒步逃亡至德国](/articles/dw/1024565.md)
 
 8-18 [霹靂舞迎來巴黎奧運光榮時刻－這能維持多久?](/articles/dw/1024566.md)
@@ -598,6 +600,4 @@
 7-18 [金融国企向员工倒追薪：波及香港](/articles/dw/1024862.md)
 
 7-18 [特朗普遇刺事件仍疑点重重](/articles/dw/1024863.md)
-
-7-18 [与俄方进行和平谈判？ 乌克兰民众有意愿](/articles/dw/1024864.md)
 
