--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 8-18 [歪脑｜巴拿马难民营里的众生相： “走线”去美国的人，穿越雨林后在这里喘了口气](/articles/cdt/337881.md)
 
+8-18 [党史博采｜邓颖超与新中国首部《婚姻法》，力排众议，主张一方坚持离婚即可离婚](/articles/cdt/337883.md)
+
 8-18 [艾大荀｜看到金牌，也看到人们羞于谈起的背面](/articles/cdt/337885.md)
 
 8-18 [三月暴雨至｜结婚不需户口本，离婚还要冷静期？几十年前的婚姻法可不是这样](/articles/cdt/337887.md)
@@ -598,6 +600,4 @@
 7-11 [【404文库】21世纪经济报道｜油罐车轨迹查询功能下架](/articles/cdt/338980.md)
 
 7-11 [罗翔说刑法｜离开了对人的尊重，一切罪恶都是有可能的](/articles/cdt/338983.md)
-
-7-11 [每日一语 2024.7.10](/articles/cdt/338990.md)
 
