--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-18 [中国渔船金门外海遭撞沉没 两岸报道有出入](/articles/dw/1024563.md)
+
 8-18 [火星地表下或有大量液态水](/articles/dw/1024564.md)
 
 8-18 [两名伊朗人徒步逃亡至德国](/articles/dw/1024565.md)
@@ -598,6 +600,4 @@
 7-18 [中国前外长秦刚再有消息 免去中央委员职务](/articles/dw/1024861.md)
 
 7-18 [金融国企向员工倒追薪：波及香港](/articles/dw/1024862.md)
-
-7-18 [特朗普遇刺事件仍疑点重重](/articles/dw/1024863.md)
 
