--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-18 [库尔斯克又一座桥梁受损 白俄罗斯向边境调兵](/articles/dw/1024562.md)
+
 8-18 [中国渔船金门外海遭撞沉没 两岸报道有出入](/articles/dw/1024563.md)
 
 8-18 [火星地表下或有大量液态水](/articles/dw/1024564.md)
@@ -598,6 +600,4 @@
 7-18 [研究：特朗普当选 德国经济将损失1500亿欧元](/articles/dw/1024860.md)
 
 7-18 [中国前外长秦刚再有消息 免去中央委员职务](/articles/dw/1024861.md)
-
-7-18 [金融国企向员工倒追薪：波及香港](/articles/dw/1024862.md)
 
