--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-18 [驳斥北京撤船要求，菲律宾强调南中国海萨比纳礁是菲领土](/articles/voa/1013255.md)
+
 8-18 [泰国新总理帕东坦正式上任 誓言振兴经济](/articles/voa/1013256.md)
 
 8-18 [越南最高领导人苏林抵达中国展开为期三天访问 将会见习近平](/articles/voa/1013257.md)
@@ -598,6 +600,4 @@
 8-6 [美俄换囚后，被关押在中国的美国人的家属呼吁政府救助](/articles/voa/1013553.md)
 
 8-6 [孟加拉国总理辞职出逃，中国“一带一路”项目面临考验](/articles/voa/1013554.md)
-
-8-6 [拜登在中东紧张局势加剧之际举行安全会谈](/articles/voa/1013555.md)
 
