--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-18 [越共领导人苏林访华突显与中国关键关系，尽管河内也加强对美关系](/articles/voa/1013254.md)
+
 8-18 [驳斥北京撤船要求，菲律宾强调南中国海萨比纳礁是菲领土](/articles/voa/1013255.md)
 
 8-18 [泰国新总理帕东坦正式上任 誓言振兴经济](/articles/voa/1013256.md)
@@ -598,6 +600,4 @@
 8-6 [美议员：美须助台增强自卫 与印太盟友共同抗衡中国改变国际准则意图](/articles/voa/1013552.md)
 
 8-6 [美俄换囚后，被关押在中国的美国人的家属呼吁政府救助](/articles/voa/1013553.md)
-
-8-6 [孟加拉国总理辞职出逃，中国“一带一路”项目面临考验](/articles/voa/1013554.md)
 
