--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-19 [布林肯再次推动加沙停火，以色列攻击打死28人](/articles/voa/1013252.md)
+
 8-19 [俄军本月第三次对基辅发动弹道导弹袭击，普京应对乌军越境袭击迟缓僵硬](/articles/voa/1013253.md)
 
 8-18 [越共领导人苏林访华突显与中国关键关系，尽管河内也加强对美关系](/articles/voa/1013254.md)
@@ -598,6 +600,4 @@
 8-6 [联合国调查：九名雇员可能参与10月7日针对以色列的恐怖攻击](/articles/voa/1013550.md)
 
 8-6 [谷歌在反垄断案中败诉](/articles/voa/1013551.md)
-
-8-6 [美议员：美须助台增强自卫 与印太盟友共同抗衡中国改变国际准则意图](/articles/voa/1013552.md)
 
