--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-19 [马尔代夫与中国自贸协议即将生效，引发主权担忧](/articles/voa/1013250.md)
+
 8-19 [印度医生被奸杀引发的抗议在蔓延](/articles/voa/1013251.md)
 
 8-19 [布林肯再次推动加沙停火，以色列攻击打死28人](/articles/voa/1013252.md)
@@ -598,6 +600,4 @@
 8-6 [希望在美国扩张的中国企业面临不确定性和怀疑](/articles/voa/1013548.md)
 
 8-6 [拜登旨在缓解中东紧张局势](/articles/voa/1013549.md)
-
-8-6 [联合国调查：九名雇员可能参与10月7日针对以色列的恐怖攻击](/articles/voa/1013550.md)
 
