--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-19 [美国民主党人计划在全国大会上庆祝卡玛拉·哈里斯](/articles/voa/1013249.md)
+
 8-19 [马尔代夫与中国自贸协议即将生效，引发主权担忧](/articles/voa/1013250.md)
 
 8-19 [印度医生被奸杀引发的抗议在蔓延](/articles/voa/1013251.md)
@@ -598,6 +600,4 @@
 8-6 [大规模抛售震动华尔街后 日经指数周二早盘飙升近11%](/articles/voa/1013547.md)
 
 8-6 [希望在美国扩张的中国企业面临不确定性和怀疑](/articles/voa/1013548.md)
-
-8-6 [拜登旨在缓解中东紧张局势](/articles/voa/1013549.md)
 
