--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-19 [南海主權爭議升溫 中菲船隻互斥故意衝撞](/articles/dw/1024558.md)
+
 8-19 [失业率创新高 中国千万青年失业大军沦诈骗目标](/articles/dw/1024559.md)
 
 8-18 [越领导人苏林访华见习近平： 延续“竹子外交” 加强经济合作](/articles/dw/1024560.md)
@@ -598,6 +600,4 @@
 7-18 [冯德莱恩成功连任欧委会主席](/articles/dw/1024856.md)
 
 7-18 [特朗普遇刺受伤  全球震惊](/articles/dw/1024857.md)
-
-7-18 [三中全会闭幕：充斥口号的会议公报](/articles/dw/1024858.md)
 
