--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-19 [《老友记》马修·佩里最后的日子：每天至少六针氯胺酮](/articles/nyt/1042467.md)
+
 8-19 [日本需要外国劳工，但新移民想留下来并不容易](/articles/nyt/1042468.md)
 
 8-19 [泰国新任总理佩通坦是谁？](/articles/nyt/1042469.md)
@@ -598,6 +600,4 @@
 5-16 [中菲对峙升级，中国出动数十艘舰艇拦截菲律宾抗议船队](/articles/nyt/1042765.md)
 
 5-16 [美国封禁TikTok是中共宣传的胜利](/articles/nyt/1042766.md)
-
-5-15 [拜登和特朗普的对华贸易战有何不同](/articles/nyt/1042767.md)
 
