--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-19 [35年前，改变德国命运的“泛欧洲野餐”](/articles/dw/1024556.md)
+
+8-19 [专家：俄罗斯经济就像服了兴奋剂的马拉松选手](/articles/dw/1024557.md)
+
 8-19 [南海主權爭議升溫 中菲船隻互斥故意衝撞](/articles/dw/1024558.md)
 
 8-19 [失业率创新高 中国千万青年失业大军沦诈骗目标](/articles/dw/1024559.md)
@@ -596,8 +600,4 @@
 7-19 [川普提名演說訴諸感性 拜登面臨更大勸退聲浪](/articles/dw/1024854.md)
 
 7-18 [中国一再推动哈马斯与法塔赫和谈是为何？](/articles/dw/1024855.md)
-
-7-18 [冯德莱恩成功连任欧委会主席](/articles/dw/1024856.md)
-
-7-18 [特朗普遇刺受伤  全球震惊](/articles/dw/1024857.md)
 
