--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-19 [布林肯访问以色列 以色列与哈马斯指责彼此不愿停火](/articles/voa/1013245.md)
+
+8-19 [习近平会见越南新领导人苏林，称越南为“周边外交的优先方向”](/articles/voa/1013246.md)
+
 8-19 [韩美启动“乙支自由护盾”年度军演 以应对朝鲜军事和网络威胁](/articles/voa/1013247.md)
 
 8-19 [菲律宾两艘海警船与中国海警船碰撞后受损](/articles/voa/1013248.md)
@@ -596,8 +600,4 @@
 8-6 [路透：中国企业囤积三星高端芯片 因应美国将出台新规](/articles/voa/1013543.md)
 
 8-6 [哈里斯正式赢得民主党总统候选人提名](/articles/voa/1013544.md)
-
-8-6 [推翻哈西娜的抗议者希望诺贝尔奖得主穆罕默德·尤努斯组建孟加拉国临时政府](/articles/voa/1013545.md)
-
-8-6 [美国向伊朗传递信息：不要在“关键时刻”将紧张局势升级](/articles/voa/1013546.md)
 
