--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-19 [穿不穿台海？德军舰长等候柏林下命令](/articles/dw/1024555.md)
+
 8-19 [35年前，改变德国命运的“泛欧洲野餐”](/articles/dw/1024556.md)
 
 8-19 [专家：俄罗斯经济就像服了兴奋剂的马拉松选手](/articles/dw/1024557.md)
@@ -598,6 +600,4 @@
 7-19 [客座評論：Shame on you《華爾街日報》](/articles/dw/1024853.md)
 
 7-19 [川普提名演說訴諸感性 拜登面臨更大勸退聲浪](/articles/dw/1024854.md)
-
-7-18 [中国一再推动哈马斯与法塔赫和谈是为何？](/articles/dw/1024855.md)
 
