--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-19 [客座评论：习近平左右摇摆 但依然心向普京](/articles/dw/1024552.md)
+
+8-19 [民主党全国代表大会：哈里斯的重要舞台](/articles/dw/1024553.md)
+
+8-19 [德国出口全线败退 汽车仍是拳头产品](/articles/dw/1024554.md)
+
 8-19 [穿不穿台海？德军舰长等候柏林下命令](/articles/dw/1024555.md)
 
 8-19 [35年前，改变德国命运的“泛欧洲野餐”](/articles/dw/1024556.md)
@@ -594,10 +600,4 @@
 7-19 [约会APP正在改变我们寻找爱情](/articles/dw/1024850.md)
 
 7-19 [美中日之間 太平洋島國還能否「自在游泳」？](/articles/dw/1024851.md)
-
-7-19 [分析：三中全會為習近平第四任期鋪路](/articles/dw/1024852.md)
-
-7-19 [客座評論：Shame on you《華爾街日報》](/articles/dw/1024853.md)
-
-7-19 [川普提名演說訴諸感性 拜登面臨更大勸退聲浪](/articles/dw/1024854.md)
 
