--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-19 [冰川思享号｜有些地方的基建已经养不起了](/articles/cdt/337844.md)
+
+8-19 [观人随笔｜最近的新闻让我浮想联翩](/articles/cdt/337847.md)
+
+8-19 [维舟｜那个死在出租公寓里的外地女孩](/articles/cdt/337849.md)
+
+8-19 [【404文库】贞观｜一个外地女孩，死在了我出租的公寓](/articles/cdt/337853.md)
+
 8-19 [新新默存｜温克坚：外资为何做多中国债市？](/articles/cdt/337857.md)
 
 8-19 [鹿人三千｜结婚不用户口簿是吧，那需要本人么？](/articles/cdt/337858.md)
@@ -592,12 +600,4 @@
 7-14 [【CDT周报】第178期：调查记者都快灭绝了，我们也还吃不上一口放心油](/articles/cdt/338925.md)
 
 7-13 [竹不倒｜让底层自己去解决问题？不仅讽刺，还越来越多……](/articles/cdt/338927.md)
-
-7-13 [人文经济学堂｜梁建章：中国经济急需发钱消费](/articles/cdt/338940.md)
-
-7-15 [【敏感词库】709案九周年、巴奈金曲奖发言提六四、中国经济负面不断](/articles/cdt/338949.md)
-
-7-12 [城市的地得｜想象中的惩罚](/articles/cdt/338952.md)
-
-7-12 [南方周末｜警权“扩”与“限”：治安管理处罚法大修，十万人提出建议](/articles/cdt/338954.md)
 
