--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-19 [常识流通处｜是谁杀死了那个出租公寓里的外地女孩？](/articles/cdt/337841.md)
+
 8-19 [冰川思享号｜有些地方的基建已经养不起了](/articles/cdt/337844.md)
 
 8-19 [观人随笔｜最近的新闻让我浮想联翩](/articles/cdt/337847.md)
@@ -598,6 +600,4 @@
 7-13 [每日一语 2024.7.12](/articles/cdt/338924.md)
 
 7-14 [【CDT周报】第178期：调查记者都快灭绝了，我们也还吃不上一口放心油](/articles/cdt/338925.md)
-
-7-13 [竹不倒｜让底层自己去解决问题？不仅讽刺，还越来越多……](/articles/cdt/338927.md)
 
