--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-19 [“神隐”三周后首现身 习近平见越共总书记苏林后徒留更多疑点](/articles/voa/1013235.md)
+
+8-19 [东京靖国神社再遭涂鸦，日本警方展开调查](/articles/voa/1013236.md)
+
 8-19 [布林肯：目前谈判是实现加沙停火的最后一次机会](/articles/voa/1013237.md)
 
 8-19 [日相岸田不连任 观察：他让日本在“天下围中”站上全球高度](/articles/voa/1013238.md)
@@ -596,8 +600,4 @@
 8-7 [大脱钩时代中国旅欧学生学者遭两面夹击](/articles/voa/1013533.md)
 
 8-7 [路透专家调查：中国七月份出口增速可能进一步加快](/articles/voa/1013534.md)
-
-8-7 [内蒙古牧民因抗议矿企侵占草场而被囚禁和审判](/articles/voa/1013535.md)
-
-8-7 [孟加拉国总统解散国民议会，为哈西娜政府垮台后新选举铺平道路](/articles/voa/1013536.md)
 
