--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-20 [台学者：北京在台海“巡航执法”意图将台海变“准内海”](/articles/voa/1013233.md)
+
+8-20 [美国众议院新冠病毒大流行特别小组主席率团访问台湾](/articles/voa/1013234.md)
+
 8-19 [“神隐”三周后首现身 习近平见越共总书记苏林后徒留更多疑点](/articles/voa/1013235.md)
 
 8-19 [东京靖国神社再遭涂鸦，日本警方展开调查](/articles/voa/1013236.md)
@@ -596,8 +600,4 @@
 8-7 [哈里斯宣布沃尔兹为副手人选 民主党领袖大力赞扬 特朗普团队批评其为“激进左派分子”](/articles/voa/1013531.md)
 
 8-7 [白宫：中国将加强芬太尼化学品的管理](/articles/voa/1013532.md)
-
-8-7 [大脱钩时代中国旅欧学生学者遭两面夹击](/articles/voa/1013533.md)
-
-8-7 [路透专家调查：中国七月份出口增速可能进一步加快](/articles/voa/1013534.md)
 
