--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-20 [中国因素主导印度-日本2+2部长级对话](/articles/voa/1013231.md)
+
+8-20 [台湾民众党假账风暴 中国官媒网民借机诋毁民主制度](/articles/voa/1013232.md)
+
 8-20 [台学者：北京在台海“巡航执法”意图将台海变“准内海”](/articles/voa/1013233.md)
 
 8-20 [美国众议院新冠病毒大流行特别小组主席率团访问台湾](/articles/voa/1013234.md)
@@ -596,8 +600,4 @@
 8-7 [华裔学者王书君因向中国提供异见人士情报而被判有罪](/articles/voa/1013529.md)
 
 8-7 [分析人士如何看待哈里斯的竞选搭档沃尔兹？](/articles/voa/1013530.md)
-
-8-7 [哈里斯宣布沃尔兹为副手人选 民主党领袖大力赞扬 特朗普团队批评其为“激进左派分子”](/articles/voa/1013531.md)
-
-8-7 [白宫：中国将加强芬太尼化学品的管理](/articles/voa/1013532.md)
 
