--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-20 [泽连斯基称库尔斯克攻势正在实现目标;乌军在乌东战况吃紧](/articles/voa/1013229.md)
+
+8-20 [印度总理莫迪将会晤乌克兰的泽连斯基](/articles/voa/1013230.md)
+
 8-20 [中国因素主导印度-日本2+2部长级对话](/articles/voa/1013231.md)
 
 8-20 [台湾民众党假账风暴 中国官媒网民借机诋毁民主制度](/articles/voa/1013232.md)
@@ -596,8 +600,4 @@
 8-7 [VOA独家: 维吾尔活动人士称前商业伙伴在新疆被判刑](/articles/voa/1013527.md)
 
 8-7 [会对华友好还是强硬？哈里斯副手的在华工作经历引起中国社媒讨论](/articles/voa/1013528.md)
-
-8-7 [华裔学者王书君因向中国提供异见人士情报而被判有罪](/articles/voa/1013529.md)
-
-8-7 [分析人士如何看待哈里斯的竞选搭档沃尔兹？](/articles/voa/1013530.md)
 
