--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-20 [中越领导人会晤签了哪些协议？](/articles/dw/1024546.md)
+
 8-20 [中梵续约时限再至 北京有建交与否主动权?](/articles/dw/1024547.md)
 
 8-19 [打造“命运共同体”  中越共产党领导人举行会晤](/articles/dw/1024548.md)
@@ -598,6 +600,4 @@
 7-20 [陕西山洪爆发冲垮高速公路 死伤惨重](/articles/dw/1024844.md)
 
 7-20 [默克尔稳健执政16年 政治遗产今安在？](/articles/dw/1024845.md)
-
-7-20 [最高235.6%  欧盟对中国甜味剂征税](/articles/dw/1024846.md)
 
