--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-20 [《谎言的囚徒》：被中国监禁20年的中情局特工](/articles/nyt/1042464.md)
+
 8-20 [“中国经济奇迹”梦醒](/articles/nyt/1042465.md)
 
 8-19 [企业为中美贸易战下一阶段做准备](/articles/nyt/1042466.md)
@@ -598,6 +600,4 @@
 5-16 [做好准备，第二次“中国冲击”来了](/articles/nyt/1042762.md)
 
 5-16 [李显龙卸任，“新加坡模式”渐失人心？](/articles/nyt/1042763.md)
-
-5-16 [普京访华想从习近平那里得到什么](/articles/nyt/1042764.md)
 
