--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-20 [哈里斯意外现身民主党全国代表大会，呼吁民主党人“战斗”](/articles/voa/1013216.md)
+
 8-20 [菲律宾同意设立中心 协助“有限数量”的阿富汗人申请美国签证](/articles/voa/1013217.md)
 
 8-20 [美情报官员:伊朗应对特朗普及拜登-哈里斯竞选团队所遭黑客攻击负责](/articles/voa/1013218.md)
@@ -598,6 +600,4 @@
 8-7 [乌军越境攻击俄库尔斯克地区，双方展开激战](/articles/voa/1013514.md)
 
 8-7 [部署更多美军之际美国领导层呼吁中东保持冷静](/articles/voa/1013515.md)
-
-8-7 [解放军在“黄岩岛”附近举行海空战巡 菲美加澳同日联合军演](/articles/voa/1013516.md)
 
