--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-20 [城市的地得｜“死在出租屋的女孩”如何被城市吞噬](/articles/cdt/337827.md)
+
 8-20 [每日一语 2024.8.19](/articles/cdt/337837.md)
 
 8-19 [常识流通处｜是谁杀死了那个出租公寓里的外地女孩？](/articles/cdt/337841.md)
@@ -598,6 +600,4 @@
 7-13 [衣者朝新｜对新京报最好的保护不是赞美](/articles/cdt/338916.md)
 
 7-13 [张3丰的世界｜我当然支持武汉司机抵制无人驾驶](/articles/cdt/338919.md)
-
-7-13 [每日一语 2024.7.12](/articles/cdt/338924.md)
 
