--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-20 [希拉里为贺锦丽站台：这次能否“打破玻璃天花板”？](/articles/nyt/1042462.md)
+
 8-20 [“加沙没有童年”，只有战火、恐惧和死亡](/articles/nyt/1042463.md)
 
 8-20 [《谎言的囚徒》：被中国监禁20年的中情局特工](/articles/nyt/1042464.md)
@@ -598,6 +600,4 @@
 5-17 [普京与习近平会面：深化中俄关系，共同对抗西方压力](/articles/nyt/1042760.md)
 
 5-17 [不仅普京需要中国，俄罗斯也同样需要中国](/articles/nyt/1042761.md)
-
-5-16 [做好准备，第二次“中国冲击”来了](/articles/nyt/1042762.md)
 
