--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-20 [香港新闻自由指数：记者评分创新低](/articles/dw/1024544.md)
+
 8-20 [习近平、苏林会晤签了哪些协议？](/articles/dw/1024545.md)
 
 8-20 [中越领导人会晤签了哪些协议？](/articles/dw/1024546.md)
@@ -598,6 +600,4 @@
 7-20 [销售不佳之际  保时捷中国业务“换帅”](/articles/dw/1024842.md)
 
 7-20 [竹子外交 大力反腐 越共总书记阮富仲病逝](/articles/dw/1024843.md)
-
-7-20 [陕西山洪爆发冲垮高速公路 死伤惨重](/articles/dw/1024844.md)
 
