--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-20 [老牌恶棍｜美驻华使馆“造假”，他蠢还是我们蠢？](/articles/cdt/337817.md)
+
+8-20 [游民星空｜给《黑神话：悟空》打8分的IGN编辑：别骂我祖宗，太疯狂了！](/articles/cdt/337822.md)
+
 8-20 [卖杏花｜非虚构，死在出租屋里](/articles/cdt/337824.md)
 
 8-20 [城市的地得｜“死在出租屋的女孩”如何被城市吞噬](/articles/cdt/337827.md)
@@ -596,8 +600,4 @@
 7-14 [【CDT报告汇】皮尤：美国四分之三受访者认为中国经济对美国影响负面（外二篇）](/articles/cdt/338907.md)
 
 8-1 [【中国哭墙】我们纪念您，更重要的是奠垫自己的良知（7月1日-7月31日，2024年）](/articles/cdt/338912.md)
-
-7-13 [中国新闻周刊｜“苕萝卜”占比不到1%，武汉司机为何慌了？](/articles/cdt/338915.md)
-
-7-13 [衣者朝新｜对新京报最好的保护不是赞美](/articles/cdt/338916.md)
 
