--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-20 [应对人口老化危机 中国加码投资社保基金](/articles/dw/1024541.md)
+
+8-20 [中国高科技公司如何在欧洲开展院外游说？](/articles/dw/1024542.md)
+
+8-20 [客座评论：中国鼓励伊朗报复以色列？](/articles/dw/1024543.md)
+
 8-20 [香港新闻自由指数：记者评分创新低](/articles/dw/1024544.md)
 
 8-20 [习近平、苏林会晤签了哪些协议？](/articles/dw/1024545.md)
@@ -594,10 +600,4 @@
 7-21 [奥迪决定关闭布鲁塞尔工厂 先裁员1500人](/articles/dw/1024839.md)
 
 7-21 [当幼儿园摇身变成老人活动中心](/articles/dw/1024840.md)
-
-7-21 [特朗普竞选搭档万斯其人](/articles/dw/1024841.md)
-
-7-20 [销售不佳之际  保时捷中国业务“换帅”](/articles/dw/1024842.md)
-
-7-20 [竹子外交 大力反腐 越共总书记阮富仲病逝](/articles/dw/1024843.md)
 
