--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-20 [美中为何对刚结束的金融工作组会议做出不同表述？](/articles/voa/1013206.md)
+
+8-20 [欧盟下调特斯拉和中国车企的关税税率，中国以减少投资威胁欧洲](/articles/voa/1013207.md)
+
 8-20 [港人纷纷离开家园 大陆人填补空缺？](/articles/voa/1013208.md)
 
 8-20 [台湾在敏感试验基地向媒体展示防空导弹操演威力](/articles/voa/1013209.md)
@@ -596,8 +600,4 @@
 8-8 [美共和党议员致函司法部 要求调查高等院校与中国有关的资金细节](/articles/voa/1013504.md)
 
 8-8 [美军报告称中俄对美国本土的军事威胁日趋严重](/articles/voa/1013505.md)
-
-8-8 [原子弹爆炸79周年之际 日本军队逐渐摆脱二战阴影](/articles/voa/1013506.md)
-
-8-8 [“新质生产力”成中国经济遮羞布 低技术产业崩溃令工人叫苦连天](/articles/voa/1013507.md)
 
