--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-21 [欧中贸易纠纷远非电动车，欧盟调查分五路展开](/articles/voa/1013204.md)
+
+8-21 [布林肯：以色列接受了美方加沙停火过渡性方案](/articles/voa/1013205.md)
+
 8-20 [美中为何对刚结束的金融工作组会议做出不同表述？](/articles/voa/1013206.md)
 
 8-20 [欧盟下调特斯拉和中国车企的关税税率，中国以减少投资威胁欧洲](/articles/voa/1013207.md)
@@ -596,8 +600,4 @@
 8-8 [国事光析：“中国式现代化”的障眼法](/articles/voa/1013502.md)
 
 8-8 [英国骚乱: 在英港人组织担忧针对讯息 多地出现反对“反移民”示威](/articles/voa/1013503.md)
-
-8-8 [美共和党议员致函司法部 要求调查高等院校与中国有关的资金细节](/articles/voa/1013504.md)
-
-8-8 [美军报告称中俄对美国本土的军事威胁日趋严重](/articles/voa/1013505.md)
 
