--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+8-21 [中国与菲律宾冲突不断 东盟和美国会启动更多反制措施吗？](/articles/voa/1013199.md)
+
+8-21 [泰国西那瓦家族卷土重来，但能持续多久？](/articles/voa/1013200.md)
+
+8-21 [美两党议员质疑美国在中国进行的临床试验](/articles/voa/1013201.md)
+
+8-21 [日本开发无人水面舰艇 部署“幽灵舰队”对抗中国](/articles/voa/1013202.md)
+
 8-21 [日本扩大在欧美及亚洲推销水产，取代失去的中国市场](/articles/voa/1013203.md)
 
 8-21 [欧中贸易纠纷远非电动车，欧盟调查分五路展开](/articles/voa/1013204.md)
@@ -592,12 +600,4 @@
 8-8 [美国总统选战在中西部地区打响](/articles/voa/1013497.md)
 
 8-8 [欧盟监测机构：2024年越来越可能成为有记录以来最热年份](/articles/voa/1013498.md)
-
-8-8 [中国福耀玻璃厂在美涉嫌金融犯罪和劳工剥削遭调查](/articles/voa/1013499.md)
-
-8-8 [蒂姆·沃尔兹成为民主党副总统候选人后他与中国的关系备受关注](/articles/voa/1013500.md)
-
-8-8 [世卫组织：将向加沙运送100万支脊髓灰质炎疫苗](/articles/voa/1013501.md)
-
-8-8 [国事光析：“中国式现代化”的障眼法](/articles/voa/1013502.md)
 
