--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-21 [台積電德國廠動土 如何克服文化差異？](/articles/dw/1024533.md)
+
 8-20 [中国制造特斯拉获得欧盟较低税率](/articles/dw/1024534.md)
 
 8-20 [改造中国版 加纳绿色三轮车 “圈粉”](/articles/dw/1024535.md)
@@ -598,6 +600,4 @@
 7-22 [拜登退選力推賀錦麗出戰 各界怎麼看？](/articles/dw/1024831.md)
 
 7-21 [菲律宾：中菲就坐滩军舰补给事宜达成一致](/articles/dw/1024832.md)
-
-7-21 [乌克兰战场 俄军步步紧逼 乌军缺弹少人](/articles/dw/1024833.md)
 
