--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-21 [亮见｜租屋里的女子，到底为何而死？](/articles/cdt/337808.md)
+
+8-21 [建设性意见｜打算去郑州旅游的朋友们注意了！](/articles/cdt/337810.md)
+
 8-20 [老牌恶棍｜美驻华使馆“造假”，他蠢还是我们蠢？](/articles/cdt/337817.md)
 
 8-20 [游民星空｜给《黑神话：悟空》打8分的IGN编辑：别骂我祖宗，太疯狂了！](/articles/cdt/337822.md)
@@ -596,8 +600,4 @@
 7-14 [导筒directube｜韩媒：朝鲜处决30多名观看韩剧的中学生](/articles/cdt/338902.md)
 
 7-14 [【404文库】基本常识｜中国2100万美元援建瓦努阿图总统府，该国人口33万](/articles/cdt/338906.md)
-
-7-14 [【CDT报告汇】皮尤：美国四分之三受访者认为中国经济对美国影响负面（外二篇）](/articles/cdt/338907.md)
-
-8-1 [【中国哭墙】我们纪念您，更重要的是奠垫自己的良知（7月1日-7月31日，2024年）](/articles/cdt/338912.md)
 
