--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-21 [真实故事计划｜当一个英国年轻人在大厂成为「牛马」](/articles/cdt/337806.md)
+
 8-21 [亮见｜租屋里的女子，到底为何而死？](/articles/cdt/337808.md)
 
 8-21 [建设性意见｜打算去郑州旅游的朋友们注意了！](/articles/cdt/337810.md)
@@ -598,6 +600,4 @@
 7-14 [维舟｜对人的尊重，怎么就那么难](/articles/cdt/338900.md)
 
 7-14 [导筒directube｜韩媒：朝鲜处决30多名观看韩剧的中学生](/articles/cdt/338902.md)
-
-7-14 [【404文库】基本常识｜中国2100万美元援建瓦努阿图总统府，该国人口33万](/articles/cdt/338906.md)
 
