--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-21 [《黑神话：悟空》爆火背后：言论管控令海外玩家不满](/articles/nyt/1042460.md)
+
 8-21 [拜登“告别”演说：“美国，我为你竭尽全力”](/articles/nyt/1042461.md)
 
 8-20 [希拉里为贺锦丽站台：这次能否“打破玻璃天花板”？](/articles/nyt/1042462.md)
@@ -598,6 +600,4 @@
 5-17 [同样面临虚假信息和安全威胁，台湾为何不封禁TikTok](/articles/nyt/1042758.md)
 
 5-17 [对华电动汽车新关税背后，美国车企的深切担忧](/articles/nyt/1042759.md)
-
-5-17 [普京与习近平会面：深化中俄关系，共同对抗西方压力](/articles/nyt/1042760.md)
 
