--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-21 [中国青年失业率高企催生出新世代阶级—“烂尾娃”](/articles/voa/1013184.md)
+
 8-21 [太平洋岛国论坛前夕 习近平表示支持斐济总理的“和平之海”愿景](/articles/voa/1013185.md)
 
 8-21 [“事关真实的历史” 毛泽东前秘书李锐日记司法争夺战加州继续](/articles/voa/1013186.md)
@@ -598,6 +600,4 @@
 8-9 [越菲防卫联演 共同应对中国？](/articles/voa/1013482.md)
 
 8-9 [VOA独家专访 朱虞夫：我相信越是黑暗，我们离天亮越不远了](/articles/voa/1013483.md)
-
-8-9 [日本首相出访中亚 与中俄竞争影响力](/articles/voa/1013484.md)
 
