--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-21 [印度总理莫迪将在访乌期间与泽连斯基商讨和平结束乌克兰战争的方案](/articles/voa/1013182.md)
+
+8-21 [赖清德：中国威权主义扩张的对象不会仅限于台湾](/articles/voa/1013183.md)
+
 8-21 [中国青年失业率高企催生出新世代阶级—“烂尾娃”](/articles/voa/1013184.md)
 
 8-21 [太平洋岛国论坛前夕 习近平表示支持斐济总理的“和平之海”愿景](/articles/voa/1013185.md)
@@ -596,8 +600,4 @@
 8-9 [因涉强迫维吾尔人劳动，五家中国公司被美国政府加入禁止进口清单](/articles/voa/1013480.md)
 
 8-9 [伊拉克官员：五人因在伊拉克空军基地造成美军受伤的袭击而被捕](/articles/voa/1013481.md)
-
-8-9 [越菲防卫联演 共同应对中国？](/articles/voa/1013482.md)
-
-8-9 [VOA独家专访 朱虞夫：我相信越是黑暗，我们离天亮越不远了](/articles/voa/1013483.md)
 
