--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-21 [奥巴马与贺锦丽：志趣相投、投桃报李](/articles/nyt/1042458.md)
+
 8-21 [拜登批准机密核武战略，重点关注中国威胁](/articles/nyt/1042459.md)
 
 8-21 [《黑神话：悟空》爆火背后：言论管控令海外玩家不满](/articles/nyt/1042460.md)
@@ -598,6 +600,4 @@
 5-20 [普京访问哈工大，中俄加强军事联系令西方担忧](/articles/nyt/1042756.md)
 
 5-20 [习近平与普京贴面拥抱，无视西方压力坚定与俄罗斯结盟](/articles/nyt/1042757.md)
-
-5-17 [同样面临虚假信息和安全威胁，台湾为何不封禁TikTok](/articles/nyt/1042758.md)
 
