--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-21 [赖清德：中国扩张威权主义的对象不限于台湾](/articles/dw/1024531.md)
+
 8-21 [美調整威懾戰略 首度聚焦中國核武擴張](/articles/dw/1024532.md)
 
 8-21 [台積電德國廠動土 如何克服文化差異？](/articles/dw/1024533.md)
@@ -598,6 +600,4 @@
 7-22 [德语媒体：世界最强大统治者的软肋](/articles/dw/1024829.md)
 
 7-22 [除了賀錦麗 民主黨還有誰可能迎戰川普？](/articles/dw/1024830.md)
-
-7-22 [拜登退選力推賀錦麗出戰 各界怎麼看？](/articles/dw/1024831.md)
 
