--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 8-21 [那些原本是废话的常识｜鼓吹狼性的社会不值得留恋，因为骨子里都坏了](/articles/cdt/337800.md)
 
+8-21 [每日一语 2024.8.20](/articles/cdt/337804.md)
+
 8-21 [真实故事计划｜当一个英国年轻人在大厂成为「牛马」](/articles/cdt/337806.md)
 
 8-21 [亮见｜租屋里的女子，到底为何而死？](/articles/cdt/337808.md)
@@ -598,6 +600,4 @@
 7-15 [每日一语 2024.7.14](/articles/cdt/338885.md)
 
 7-14 [极昼工作室｜农村医保「催缴员」：380元的现实重量](/articles/cdt/338899.md)
-
-7-14 [维舟｜对人的尊重，怎么就那么难](/articles/cdt/338900.md)
 
