--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-21 [国事光析：邓小平的藤怎样结出习近平的瓜？](/articles/voa/1013179.md)
+
 8-21 [中国对欧盟进口的乳制品展开反补贴调查](/articles/voa/1013180.md)
 
 8-21 [中国称对有关美国核战略聚焦中国的报道“严重关切”](/articles/voa/1013181.md)
@@ -598,6 +600,4 @@
 8-9 [美国超过中国成为德国最大的贸易伙伴](/articles/voa/1013477.md)
 
 8-9 [一田纳西男子因帮助位于中国的朝鲜IT工作者假冒身份为美英公司远程工作而被捕](/articles/voa/1013478.md)
-
-8-9 [“透明策略”应对中国灰色地带作战 专家吁台湾以菲律宾为师](/articles/voa/1013479.md)
 
