--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-21 [包邮区｜让自己人先走](/articles/cdt/337783.md)
+
+8-21 [西坡原创｜说实话我有点心疼悟空了](/articles/cdt/337786.md)
+
 8-21 [那些原本是废话的常识｜鼓吹狼性的社会不值得留恋，因为骨子里都坏了](/articles/cdt/337800.md)
+
+8-21 [【CDT百科】“历史的垃圾时间”是什么梗？](/articles/cdt/337802.md)
 
 8-21 [每日一语 2024.8.20](/articles/cdt/337804.md)
 
@@ -594,10 +600,4 @@
 7-15 [老牌恶棍｜卢克文的糟心事儿](/articles/cdt/338878.md)
 
 7-15 [衣者褚｜当人丧失良知之后](/articles/cdt/338880.md)
-
-7-15 [往事与随想｜新闻传播的“两种闭环”：从改变社会到改变媒体](/articles/cdt/338882.md)
-
-7-15 [每日一语 2024.7.14](/articles/cdt/338885.md)
-
-7-14 [极昼工作室｜农村医保「催缴员」：380元的现实重量](/articles/cdt/338899.md)
 
