--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-21 [“是的，她一定行（Yes she can）”](/articles/dw/1024529.md)
+
+8-21 [西方航空公司为何缩减中国航班？](/articles/dw/1024530.md)
+
 8-21 [赖清德：中国扩张威权主义的对象不限于台湾](/articles/dw/1024531.md)
 
 8-21 [美調整威懾戰略 首度聚焦中國核武擴張](/articles/dw/1024532.md)
@@ -596,8 +600,4 @@
 7-22 [乌克兰外长周二开始访华行程](/articles/dw/1024827.md)
 
 7-22 [仁爱礁协议到底包含哪些内容？中菲各说各话](/articles/dw/1024828.md)
-
-7-22 [德语媒体：世界最强大统治者的软肋](/articles/dw/1024829.md)
-
-7-22 [除了賀錦麗 民主黨還有誰可能迎戰川普？](/articles/dw/1024830.md)
 
