--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-21 [奥巴马呼吁美国选民拥抱哈里斯，并警告选战艰苦](/articles/voa/1013176.md)
+
+8-21 [莫斯科遭到乌克兰大规模无人机袭击](/articles/voa/1013177.md)
+
+8-21 [中国拟结婚离婚不需户口 应对人口下降良策？](/articles/voa/1013178.md)
+
 8-21 [国事光析：邓小平的藤怎样结出习近平的瓜？](/articles/voa/1013179.md)
 
 8-21 [中国对欧盟进口的乳制品展开反补贴调查](/articles/voa/1013180.md)
@@ -594,10 +600,4 @@
 8-9 [预算吃紧的中国政府向企业和个人追缴欠税](/articles/voa/1013474.md)
 
 8-9 [俄乌连续第三天在库尔斯克州交战，五角大楼：乌军越境反击符合美国有关使用美制武器的政策](/articles/voa/1013475.md)
-
-8-9 [中国政府官网新增“惩治‘台独’顽固分子”专栏及举报邮箱引发台湾朝野不满](/articles/voa/1013476.md)
-
-8-9 [美国超过中国成为德国最大的贸易伙伴](/articles/voa/1013477.md)
-
-8-9 [一田纳西男子因帮助位于中国的朝鲜IT工作者假冒身份为美英公司远程工作而被捕](/articles/voa/1013478.md)
 
