--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-21 [布鲁塞尔与北京之间的贸易争端进一步升级](/articles/dw/1024525.md)
+
+8-21 [中国电子游戏《黑神话：悟空》言论审查惹恼海外玩家](/articles/dw/1024526.md)
+
 8-21 [以军在加沙地带发现六名人质遗体](/articles/dw/1024527.md)
 
 8-21 [68岁高山滑雪巨星斯滕马克再现风采](/articles/dw/1024528.md)
@@ -596,8 +600,4 @@
 7-22 [以色列空袭数日后，荷台达仍烈焰熊熊](/articles/dw/1024823.md)
 
 7-22 [围绕川普遇刺 社交媒体的关键角色](/articles/dw/1024824.md)
-
-7-22 [法国拒发部分俄记者奥运采访证](/articles/dw/1024825.md)
-
-7-22 [泽连斯基：德国的‘爱国者’到了](/articles/dw/1024826.md)
 
