--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-22 [建设性意见｜“贞观”公众号被禁言，背后是自媒体不可能抵达的真相](/articles/cdt/337776.md)
+
 8-21 [包邮区｜让自己人先走](/articles/cdt/337783.md)
 
 8-21 [西坡原创｜说实话我有点心疼悟空了](/articles/cdt/337786.md)
@@ -598,6 +600,4 @@
 7-15 [建设性意见｜别怕！我们经济增速5.0](/articles/cdt/338873.md)
 
 7-15 [亮见｜你这么长久地发声，到底是为了什么？](/articles/cdt/338876.md)
-
-7-15 [老牌恶棍｜卢克文的糟心事儿](/articles/cdt/338878.md)
 
