--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-22 [在下周太平洋岛国论坛峰会上，美国太平洋领地地位接近升级](/articles/voa/1013167.md)
+
+8-22 [Shein再次在美国法院状告Temu](/articles/voa/1013168.md)
+
 8-22 [香港记协新闻自由指数业界评分创11年新低 新主席指23条立法后渐趋大陆化](/articles/voa/1013169.md)
 
 8-22 [布林肯结束中东之行 敦促以哈尽快达成停火协议](/articles/voa/1013170.md)
@@ -596,8 +600,4 @@
 8-9 [奥运两岸对决再引台湾参赛话题 专家:中国的跋扈已到忍耐的临界点](/articles/voa/1013465.md)
 
 8-9 [美国零售商因担心罢工和航运中断而加速假日商品进口](/articles/voa/1013466.md)
-
-8-9 [“巨大地震”风险高于平常，日本首相取消赴中亚访问](/articles/voa/1013467.md)
-
-8-9 [随着中国经济失去动能 印度成为消费品巨头的下一个重大增长目标](/articles/voa/1013468.md)
 
