--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+8-22 [印尼寻求在国内产业与激增的中国进口之间取得平衡的方法](/articles/voa/1013160.md)
+
+8-22 [台湾绝不能陷落：彭斯撰文批评特朗普涉台言论为孤立主义](/articles/voa/1013161.md)
+
+8-22 [莫谈“政治”，禁止“女权主义宣传”：热门中国电子游戏卷入言论审查风波](/articles/voa/1013162.md)
+
+8-22 [民主党大会第三夜:副总统候选人沃尔兹和前总统克林顿是主要演讲人](/articles/voa/1013163.md)
+
 8-22 [尽管加沙战火纷飞，以色列将注意力转向针对黎巴嫩的真主党](/articles/voa/1013164.md)
 
 8-22 [市场低迷，美妆零售商丝芙兰在中国裁员](/articles/voa/1013165.md)
@@ -592,12 +600,4 @@
 8-10 [以色列发动汗尤尼斯攻势，同意恢复加沙停火谈判](/articles/voa/1013458.md)
 
 8-10 [俄宣布库尔斯克州进入紧急状态，俄导弹击中乌东购物中心打死12人](/articles/voa/1013459.md)
-
-8-10 [中国在非洲的数字渗透引发担忧](/articles/voa/1013460.md)
-
-8-10 [中国电动和混合型车销量七月首超燃油车，突破50%大关](/articles/voa/1013461.md)
-
-8-10 [台积电布局欧美日，因应中国威胁被迫分散风险?](/articles/voa/1013462.md)
-
-8-9 [无法说服欧盟放弃对中国电动车加征关税，北京向世贸组织提起诉讼](/articles/voa/1013463.md)
 
