--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-22 [纵览新闻｜给储户赋红码被处分的女官员，已任郑州文旅局一把手](/articles/cdt/337772.md)
+
+8-22 [旧闻评论｜舆论手札：新闻界欠陈女士一篇人物特稿](/articles/cdt/337774.md)
+
 8-22 [六神磊磊读金庸｜谷爱凌还是没忍住](/articles/cdt/337775.md)
 
 8-22 [建设性意见｜“贞观”公众号被禁言，背后是自媒体不可能抵达的真相](/articles/cdt/337776.md)
@@ -596,8 +600,4 @@
 7-15 [新周刊｜ 喊着“已老实，求放过”的年轻人，没锋芒了？](/articles/cdt/338867.md)
 
 7-15 [那些原本是废话的常识｜“外国”是个什么国？我从没听说过](/articles/cdt/338869.md)
-
-7-15 [声道｜特朗普遇刺后，大A股出现魔幻一幕](/articles/cdt/338871.md)
-
-7-15 [建设性意见｜别怕！我们经济增速5.0](/articles/cdt/338873.md)
 
