--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-22 [六四政治犯遭指中國特務 唐元雋是誰？](/articles/dw/1024524.md)
+
 8-21 [布鲁塞尔与北京之间的贸易争端进一步升级](/articles/dw/1024525.md)
 
 8-21 [中国电子游戏《黑神话：悟空》言论审查惹恼海外玩家](/articles/dw/1024526.md)
@@ -598,6 +600,4 @@
 7-22 [孟加拉抗议浪潮仍在蔓延](/articles/dw/1024822.md)
 
 7-22 [以色列空袭数日后，荷台达仍烈焰熊熊](/articles/dw/1024823.md)
-
-7-22 [围绕川普遇刺 社交媒体的关键角色](/articles/dw/1024824.md)
 
