--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-22 [沃尔玛清仓京东股份，称将在中国专注山姆会员店等业务](/articles/nyt/1042456.md)
+
 8-22 [“自由更重要”：中国“自驾游阿姨”苏敏宣布离婚](/articles/nyt/1042457.md)
 
 8-21 [奥巴马与贺锦丽：志趣相投、投桃报李](/articles/nyt/1042458.md)
@@ -598,6 +600,4 @@
 5-20 [总统莱希坠机身亡，内忧外患之际伊朗面临震荡](/articles/nyt/1042754.md)
 
 5-20 [中国拯救楼市新举措：鼓励地方政府收购库存商品房](/articles/nyt/1042755.md)
-
-5-20 [普京访问哈工大，中俄加强军事联系令西方担忧](/articles/nyt/1042756.md)
 
