--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-22 [比亚迪推进在墨西哥建厂计划 希望享受州政府优惠政策](/articles/voa/1013157.md)
+
+8-22 [美国高级官员在纽约与达赖喇嘛会面](/articles/voa/1013158.md)
+
 8-22 [以民运人士身份活动的纽约居民唐元隽被美司法部指控为北京监视中国异议人士](/articles/voa/1013159.md)
 
 8-22 [印尼寻求在国内产业与激增的中国进口之间取得平衡的方法](/articles/voa/1013160.md)
@@ -596,8 +600,4 @@
 8-10 [深陷兴奋剂丑闻之际，北京发起宣传攻势反斥美国](/articles/voa/1013455.md)
 
 8-10 [美学者：美国无法承受失去台湾，但尚未准备好为台湾而战](/articles/voa/1013456.md)
-
-8-10 [美跨党派议员推出议案 谴责北京在南中国海军事挑衅行为](/articles/voa/1013457.md)
-
-8-10 [以色列发动汗尤尼斯攻势，同意恢复加沙停火谈判](/articles/voa/1013458.md)
 
