--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-22 [每日一语 2024.8.21](/articles/cdt/337767.md)
+
 8-22 [纵览新闻｜给储户赋红码被处分的女官员，已任郑州文旅局一把手](/articles/cdt/337772.md)
 
 8-22 [旧闻评论｜舆论手札：新闻界欠陈女士一篇人物特稿](/articles/cdt/337774.md)
@@ -598,6 +600,4 @@
 7-15 [维舟的方舟｜写作是我不屈的表达欲](/articles/cdt/338865.md)
 
 7-15 [新周刊｜ 喊着“已老实，求放过”的年轻人，没锋芒了？](/articles/cdt/338867.md)
-
-7-15 [那些原本是废话的常识｜“外国”是个什么国？我从没听说过](/articles/cdt/338869.md)
 
