--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-22 [面对中国威胁台湾国防预算增速超过GDP增长](/articles/voa/1013156.md)
+
 8-22 [比亚迪推进在墨西哥建厂计划 希望享受州政府优惠政策](/articles/voa/1013157.md)
 
 8-22 [美国高级官员在纽约与达赖喇嘛会面](/articles/voa/1013158.md)
@@ -598,6 +600,4 @@
 8-10 [缅甸军政府自2021年政变以来首次失去地区指挥基地](/articles/voa/1013454.md)
 
 8-10 [深陷兴奋剂丑闻之际，北京发起宣传攻势反斥美国](/articles/voa/1013455.md)
-
-8-10 [美学者：美国无法承受失去台湾，但尚未准备好为台湾而战](/articles/voa/1013456.md)
 
