--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-22 [亮见｜赋红码的张书记，重出江湖](/articles/cdt/337750.md)
+
+8-22 [豆瓣网友｜《黑神话：悟空》主创团队“游戏科学”性别歧视争议事件梳理](/articles/cdt/337764.md)
+
 8-22 [每日一语 2024.8.21](/articles/cdt/337767.md)
 
 8-22 [纵览新闻｜给储户赋红码被处分的女官员，已任郑州文旅局一把手](/articles/cdt/337772.md)
@@ -596,8 +600,4 @@
 7-15 [历史押韵｜无厘头炒股？川普遇刺，川大智胜涨停](/articles/cdt/338859.md)
 
 7-15 [四环青年｜工资卡转账额度被降到500元，银行这份“关心”太沉重](/articles/cdt/338863.md)
-
-7-15 [维舟的方舟｜写作是我不屈的表达欲](/articles/cdt/338865.md)
-
-7-15 [新周刊｜ 喊着“已老实，求放过”的年轻人，没锋芒了？](/articles/cdt/338867.md)
 
