--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-22 [关于中国扩大对欧盟进口产品的调查 你需要了解的几件事](/articles/voa/1013153.md)
+
+8-22 [美国约翰逊号导弹驱逐舰穿越台湾海峡](/articles/voa/1013154.md)
+
 8-22 [沃尔兹发表演说接受民主党副总统候选人提名](/articles/voa/1013155.md)
 
 8-22 [面对中国威胁台湾国防预算增速超过GDP增长](/articles/voa/1013156.md)
@@ -596,8 +600,4 @@
 8-10 [以色列财长反对加沙会谈，白宫抨击其误导公众](/articles/voa/1013451.md)
 
 8-10 [分析：中国航空公司海外扩展之际，外国航空公司对中国失去兴趣](/articles/voa/1013452.md)
-
-8-10 [地区参与者支持争取加沙停火的斡旋努力](/articles/voa/1013453.md)
-
-8-10 [缅甸军政府自2021年政变以来首次失去地区指挥基地](/articles/voa/1013454.md)
 
