--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-22 [中国多家媒体撰文纪念邓小平诞辰120周年](/articles/dw/1024520.md)
+
 8-22 [台湾国防预算创新高 超过GDP增长预期](/articles/dw/1024521.md)
 
 8-22 [欧洲军工业依赖中国产硝化棉的困境](/articles/dw/1024522.md)
@@ -598,6 +600,4 @@
 7-22 [国际法院裁决后 德外长敦促以色列严肃对待](/articles/dw/1024818.md)
 
 7-22 [俄罗斯积极回应泽连斯基和谈言论](/articles/dw/1024819.md)
-
-7-22 [德语媒体：习近平是改革家--理论上的](/articles/dw/1024820.md)
 
