--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-22 [木蹊说｜正告谷爱凌：你口中的“黑子”，为国家做了什么？](/articles/cdt/337747.md)
+
 8-22 [亮见｜赋红码的张书记，重出江湖](/articles/cdt/337750.md)
 
 8-22 [豆瓣网友｜《黑神话：悟空》主创团队“游戏科学”性别歧视争议事件梳理](/articles/cdt/337764.md)
@@ -598,6 +600,4 @@
 7-15 [【404文库】“令人忧心的是，当食品安全问题还远远没能放心，我们可能已经面临调查记者凋零的现状了”（外二篇）](/articles/cdt/338856.md)
 
 7-15 [历史押韵｜无厘头炒股？川普遇刺，川大智胜涨停](/articles/cdt/338859.md)
-
-7-15 [四环青年｜工资卡转账额度被降到500元，银行这份“关心”太沉重](/articles/cdt/338863.md)
 
