--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-22 [毕业即失业催生新热词“烂尾娃”](/articles/dw/1024516.md)
+
+8-22 [班克斯让动物重获自由](/articles/dw/1024517.md)
+
+8-22 [台湾10名退役军官间谍案宣判 8人获刑 最高13年](/articles/dw/1024518.md)
+
 8-22 [美国高官在纽约会见达赖喇嘛](/articles/dw/1024519.md)
 
 8-22 [中国多家媒体撰文纪念邓小平诞辰120周年](/articles/dw/1024520.md)
@@ -594,10 +600,4 @@
 7-23 [80年前刺杀希特勒行动失败](/articles/dw/1024814.md)
 
 7-23 [消息人士：英伟达将推最新芯片中国特供版](/articles/dw/1024815.md)
-
-7-23 [台灣漢光演習標榜「無劇本」 看點有哪些？](/articles/dw/1024816.md)
-
-7-22 [中国推出按“自愿、弹性”原则延迟退休年龄](/articles/dw/1024817.md)
-
-7-22 [国际法院裁决后 德外长敦促以色列严肃对待](/articles/dw/1024818.md)
 
