--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-23 [身段柔软的莫迪赴基辅访问 称没有冲突能在战场上解决](/articles/voa/1013146.md)
+
+8-23 [台总统赖清德准备首次以总统身份视察金门前线，主持八二三炮战66周年祭典](/articles/voa/1013147.md)
+
 8-22 [台湾总统赖清德会见美国前驻联合国大使妮基·黑利](/articles/voa/1013148.md)
 
 8-22 [各方推动加沙停火协议之际，以军空袭加沙及黎巴嫩南部](/articles/voa/1013149.md)
@@ -596,8 +600,4 @@
 8-10 [中国火箭于太空中解体 分析人士称逾千颗卫星面临碰撞危险](/articles/voa/1013444.md)
 
 8-10 [以色列袭击加沙 伊朗称将就暗杀事件惩罚以色列](/articles/voa/1013445.md)
-
-8-10 [无畏性别争议 阿尔及利亚拳击手赫利夫在女子66公斤级决赛夺得奥运金牌](/articles/voa/1013446.md)
-
-8-10 [中东威胁加剧 美国解除对沙特出售攻击性武器的禁令](/articles/voa/1013447.md)
 
