--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-23 [賴清德任內首訪金門：不反攻大陸亦不願受中共統治](/articles/dw/1024514.md)
+
+8-23 [全球首例夜间无人驾驶巴士上路 成夜行族新宠](/articles/dw/1024515.md)
+
 8-22 [毕业即失业催生新热词“烂尾娃”](/articles/dw/1024516.md)
 
 8-22 [班克斯让动物重获自由](/articles/dw/1024517.md)
@@ -596,8 +600,4 @@
 7-23 [巴勒斯坦各派签署《北京宣言》以色列抨击法塔赫](/articles/dw/1024812.md)
 
 7-23 [最新调查：德系电动车完胜中国品牌](/articles/dw/1024813.md)
-
-7-23 [80年前刺杀希特勒行动失败](/articles/dw/1024814.md)
-
-7-23 [消息人士：英伟达将推最新芯片中国特供版](/articles/dw/1024815.md)
 
