--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-23 [中国和白俄罗斯发表联合公报同意加强贸易与安全合作](/articles/voa/1013135.md)
+
 8-23 [民主党大会最后一夜：哈里斯接受提名并将其愿景与特朗普的相对比](/articles/voa/1013136.md)
 
 8-23 [尼泊尔解除对TikTok实施的禁令](/articles/voa/1013137.md)
@@ -598,6 +600,4 @@
 8-11 [俄罗斯在乌克兰突击进入中撤离几万人](/articles/voa/1013433.md)
 
 8-11 [巴勒斯坦官员说，以色列空袭加沙一所学校打死至少80人](/articles/voa/1013434.md)
-
-8-11 [乌军进入俄罗斯边境地区让普京难堪 它会如何影响战争进程？](/articles/voa/1013435.md)
 
