--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-23 [新“香港故事”：港府如何用国家安全展览重塑城市记忆](/articles/nyt/1042451.md)
+
 8-23 [尼泊尔新总理推翻TikTok禁令，向中国示好](/articles/nyt/1042452.md)
 
 8-23 [对女性最危险的国度？印度女医生遭奸杀案再次引发愤怒](/articles/nyt/1042453.md)
@@ -598,6 +600,4 @@
 5-21 [美国拥抱廉价“中国制造”的时代已经终结](/articles/nyt/1042749.md)
 
 5-21 [“俄罗斯美女”爱中国？一场深伪视频社媒狂欢](/articles/nyt/1042750.md)
-
-5-21 [中国公司的困境：在国内面临威权主义，在国外面临敌意](/articles/nyt/1042751.md)
 
