--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-23 [印度总理莫迪抵达基辅开启对乌克兰的访问](/articles/dw/1024513.md)
+
 8-23 [賴清德任內首訪金門：不反攻大陸亦不願受中共統治](/articles/dw/1024514.md)
 
 8-23 [全球首例夜间无人驾驶巴士上路 成夜行族新宠](/articles/dw/1024515.md)
@@ -598,6 +600,4 @@
 7-23 [德语媒体：中国的产业优势并不靠补贴](/articles/dw/1024811.md)
 
 7-23 [巴勒斯坦各派签署《北京宣言》以色列抨击法塔赫](/articles/dw/1024812.md)
-
-7-23 [最新调查：德系电动车完胜中国品牌](/articles/dw/1024813.md)
 
