--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-23 [贺锦丽感念亡母，“家庭牌”能否打动选民](/articles/nyt/1042449.md)
+
 8-23 [为何人人都爱Costco](/articles/nyt/1042450.md)
 
 8-23 [新“香港故事”：港府如何用国家安全展览重塑城市记忆](/articles/nyt/1042451.md)
@@ -598,6 +600,4 @@
 5-22 [被控为香港情报机构从事间谍活动的英国男子死亡](/articles/nyt/1042747.md)
 
 5-22 [美国寻求与欧洲联手应对中国廉价商品出口激增](/articles/nyt/1042748.md)
-
-5-21 [美国拥抱廉价“中国制造”的时代已经终结](/articles/nyt/1042749.md)
 
