--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-24 [白宫：加沙停火谈判取得进展](/articles/voa/1013119.md)
+
 8-24 [美司法部：一名佛州电信和信息技术工作者对串谋充当中国代理人的指控认罪](/articles/voa/1013120.md)
 
 8-24 [英国首相斯塔默与习近平通话，强调双方要“坦诚”对话](/articles/voa/1013121.md)
@@ -598,6 +600,4 @@
 8-12 [加州民众集会声援方艺融 抗议高智晟被中共强迫失踪七周年](/articles/voa/1013417.md)
 
 8-12 [以色列扩大加沙南部的撤离命令。哈马斯希望协议计划而不是更多谈判](/articles/voa/1013418.md)
-
-8-12 [巴黎为2024年奥运会举行一场群星秀](/articles/voa/1013419.md)
 
