--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-24 [Meta封锁了伊朗黑客的WhatsApp账户 因美国总统候选人等官员受到威胁](/articles/voa/1013110.md)
+
+8-24 [美军在叙利亚击毙了基地组织附属武装分子领导人](/articles/voa/1013111.md)
+
 8-24 [鲍威尔：美联储很快开始降息的“时机已经到来”](/articles/voa/1013112.md)
 
 8-24 [独立第三方总统候选人小罗伯特·肯尼迪暂停竞选，转而支持特朗普](/articles/voa/1013113.md)
@@ -596,8 +600,4 @@
 8-12 [路透：越共总书记苏林刚上任首次外访就奔北京](/articles/voa/1013408.md)
 
 8-12 [乌军越境攻入俄本土近一周后，俄当局呼吁更多居民撤离边境战区](/articles/voa/1013409.md)
-
-8-12 [菲律宾敦促中国在“空中挑衅事件”后缓和南中国海紧张局势](/articles/voa/1013410.md)
-
-8-12 [聿文视界：再现政变谣言，如何看待北京当下谜局](/articles/voa/1013411.md)
 
