--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-24 [图像显示乌军在俄境内攻击范围扩大，俄军每天伤亡约一千人](/articles/voa/1013102.md)
+
+8-24 [中国逆势而行批准五个核电项目 专家: 独裁国家才做得到](/articles/voa/1013103.md)
+
 8-24 [中共加大金融“反腐” 证券业权贵纷落马](/articles/voa/1013104.md)
 
 8-24 [美国前驻联合国大使黑利呼吁华府加强美台军事合作，支持台湾重返联合国](/articles/voa/1013105.md)
@@ -596,8 +600,4 @@
 8-13 [拒绝“数字牢笼”，加州民运人士抗议“网络身份证”](/articles/voa/1013400.md)
 
 8-13 [欧佩克削减2024年石油需求增长预测，中国经济不佳是一大主因](/articles/voa/1013401.md)
-
-8-13 [基里巴斯大选本周拉开帷幕，马茂政府亲中政策面临民意检验](/articles/voa/1013402.md)
-
-8-13 [美中奥运金牌“并列第一”，观察:中国煽动反美大打“认知战”](/articles/voa/1013403.md)
 
