--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-24 [Meta：伊朗黑客攻击拜登和特朗普工作人员WhatsApp账户](/articles/dw/1024497.md)
+
+8-24 [法国南部犹太教堂外发生爆炸 疑为恐怖袭击](/articles/dw/1024498.md)
+
 8-24 [德国索林根市持刀袭击案：警方逮捕一名嫌疑人](/articles/dw/1024499.md)
 
 8-24 [菲律宾指责中国对其巡逻机发射照明弹](/articles/dw/1024500.md)
@@ -596,8 +600,4 @@
 7-25 [芯片巨头德国建厂进展缓慢 唯有台积电例外](/articles/dw/1024795.md)
 
 7-25 [賀錦麗能夠打敗川普嗎？](/articles/dw/1024796.md)
-
-7-25 [拜登強調交棒新世代 川普諷演說「聽不懂」](/articles/dw/1024797.md)
-
-7-24 [法国获2030年冬奥会举办权 需先提供保证书](/articles/dw/1024798.md)
 
