--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-25 [巴基斯坦部长：与中国公司的发电合同需要审议](/articles/voa/1013097.md)
+
 8-25 [加沙停火谈判周末重启，哈马斯不参与但派代表了解情况](/articles/voa/1013098.md)
 
 8-25 [德国发生持刀杀人案造成十几人伤亡，凶嫌已落网，警方展开调查](/articles/voa/1013099.md)
@@ -598,6 +600,4 @@
 8-13 [普京：乌克兰攻入俄罗斯库尔斯克州是转移注意力的策略](/articles/voa/1013395.md)
 
 8-13 [美中金融工作组本周将于上海举行会谈](/articles/voa/1013396.md)
-
-8-13 [美国将恢复向沙特阿拉伯出售进攻型武器](/articles/voa/1013397.md)
 
