--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-25 [禾赛美国“维权”成功，中微效仿，美国防部证明中企“涉军”为何困难重重？](/articles/voa/1013094.md)
+
+8-25 [苏丹军方首领不会参加苏丹和平谈判，誓言“将战斗一百年”](/articles/voa/1013095.md)
+
 8-25 [埃及停火谈判之前，以色列空袭在加沙打死几十人](/articles/voa/1013096.md)
 
 8-25 [巴基斯坦部长：与中国公司的发电合同需要审议](/articles/voa/1013097.md)
@@ -596,8 +600,4 @@
 8-13 [美国对伊朗据报计划向俄罗斯运送数百枚弹道导弹一事深感关切](/articles/voa/1013392.md)
 
 8-13 [孟加拉国临时领导人说，哈西娜的盟友是合法辞职](/articles/voa/1013393.md)
-
-8-13 [台湾民众党陷假帐风波，承认漏报政治献金新台币1800万](/articles/voa/1013394.md)
-
-8-13 [普京：乌克兰攻入俄罗斯库尔斯克州是转移注意力的策略](/articles/voa/1013395.md)
 
