--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-25 [德国警察逮捕致命持刀攻击的嫌疑人 伊斯兰国声称对攻击负责](/articles/voa/1013093.md)
+
 8-25 [禾赛美国“维权”成功，中微效仿，美国防部证明中企“涉军”为何困难重重？](/articles/voa/1013094.md)
 
 8-25 [苏丹军方首领不会参加苏丹和平谈判，誓言“将战斗一百年”](/articles/voa/1013095.md)
@@ -598,6 +600,4 @@
 8-13 [中国官网设惩治台独专栏，学者称其如“钓鱼”网站：“有用的白痴”或自愿上钩](/articles/voa/1013391.md)
 
 8-13 [美国对伊朗据报计划向俄罗斯运送数百枚弹道导弹一事深感关切](/articles/voa/1013392.md)
-
-8-13 [孟加拉国临时领导人说，哈西娜的盟友是合法辞职](/articles/voa/1013393.md)
 
