--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-25 [每日一语 2024.8.24](/articles/cdt/337685.md)
+
 8-25 [【网络民议】#云南大理摸排出大龄未婚男性3万余人#](/articles/cdt/337688.md)
 
 8-25 [歪脑｜维吾尔族人被迫加工渔产品 全球海鲜供应链遭污染](/articles/cdt/337692.md)
@@ -598,6 +600,4 @@
 7-18 [独角鲸工作坊｜反诈再这么一刀切，普通人的银行卡就快成摆设了](/articles/cdt/338782.md)
 
 7-18 [衣者褚｜“软柿子”可能是能轻松让你头破血流的铁榔头](/articles/cdt/338787.md)
-
-7-18 [新世相｜“替大家试过了，回县城真的会后悔”](/articles/cdt/338789.md)
 
