--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-25 [太平洋岛国论坛将登场 中国与台湾持续外交角力](/articles/voa/1013090.md)
+
 8-25 [Telegram首席执行官杜罗夫于法国被逮捕 将接受调查](/articles/voa/1013091.md)
 
 8-25 [法国南部犹太教堂纵火案疑为恐怖袭击 嫌犯遭捕](/articles/voa/1013092.md)
@@ -598,6 +600,4 @@
 8-13 [美国：日内瓦苏丹谈判将举行，没有苏丹军方参与也行](/articles/voa/1013388.md)
 
 8-13 [前康奈尔大学学生因向犹太学生发布威胁被判监禁21个月](/articles/voa/1013389.md)
-
-8-13 [白宫警告说，伊朗可能即将对以色列发动袭击](/articles/voa/1013390.md)
 
