--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-25 [索林根市持刀袭击案：一嫌犯自首、伊斯兰国宣称犯案](/articles/dw/1024487.md)
+
 8-25 [中国极端天气导致农产品价格飙升](/articles/dw/1024488.md)
 
 8-25 [私人岛屿经营：过度旅游的解药？](/articles/dw/1024489.md)
@@ -598,6 +600,4 @@
 7-26 [赛前禁欲？床上运动有助运动员临场发挥](/articles/dw/1024785.md)
 
 7-26 [中印關係好轉？雙邊外長：盡早解決邊境問題](/articles/dw/1024786.md)
-
-7-26 [法塔赫和哈马斯签署《北京宣言》](/articles/dw/1024787.md)
 
