--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-25 [菲律宾指责中国海警船冲撞菲方船只](/articles/dw/1024485.md)
+
+8-25 [打造歐洲晶片自主未來 台積電德國廠動工](/articles/dw/1024486.md)
+
 8-25 [索林根市持刀袭击案：一嫌犯自首、伊斯兰国宣称犯案](/articles/dw/1024487.md)
 
 8-25 [中国极端天气导致农产品价格飙升](/articles/dw/1024488.md)
@@ -596,8 +600,4 @@
 7-26 [德国男子在白俄罗斯被判死刑后“电视认罪”](/articles/dw/1024783.md)
 
 7-26 [巴黎奥运开幕在即 法国高速铁路网遭“大规模袭击](/articles/dw/1024784.md)
-
-7-26 [赛前禁欲？床上运动有助运动员临场发挥](/articles/dw/1024785.md)
-
-7-26 [中印關係好轉？雙邊外長：盡早解決邊境問題](/articles/dw/1024786.md)
 
