--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-26 [澳參院通過挺台動議 勇敢還是幼稚？](/articles/dw/1024478.md)
+
+8-26 [奧運表現亮眼 香港運動員卻嘆全職不易](/articles/dw/1024479.md)
+
 8-26 [澳參院通過挺台動議 專家：勇敢的舉動](/articles/dw/1024480.md)
 
 8-26 [中國研擬「房屋養老金」引論戰 爭議為何？](/articles/dw/1024481.md)
@@ -596,8 +600,4 @@
 7-27 [报告：中国电动汽车市场地位提升](/articles/dw/1024776.md)
 
 7-26 [“最后一代”封堵机场 政界呼吁严惩肇事者](/articles/dw/1024777.md)
-
-7-26 [泽连斯基：“我们必须尽快结束战争”](/articles/dw/1024778.md)
-
-7-26 [德语媒体：《北京宣言》和“复苏乏力”](/articles/dw/1024779.md)
 
