--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-26 [Telegram创始人在法国被捕，引发互联网言论自由之争](/articles/nyt/1042446.md)
+
 8-26 [若中国入侵怎么办？台剧《零日攻击》引发激烈争论](/articles/nyt/1042447.md)
 
 8-26 [尼泊尔要求中国免除2.16亿美元机场建设项目贷款](/articles/nyt/1042448.md)
@@ -598,6 +600,4 @@
 5-23 [从沙皇到中共，“跨国镇压”的前世今生](/articles/nyt/1042744.md)
 
 5-22 [中国主要高铁线路涨价，凸显债务危机深重](/articles/nyt/1042745.md)
-
-5-22 [新航客机事故致一死多伤：乘机遭遇湍流时你该怎么做？](/articles/nyt/1042746.md)
 
