--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-26 [中国四大银行之一的中国银行行长刘金辞职 引发外界揣测](/articles/voa/1013073.md)
+
 8-26 [中国军队在中缅边境附近展开武装巡逻和实弹演习](/articles/voa/1013074.md)
 
 8-26 [气候困境加剧、地缘政治竞争之际 太平洋岛国论坛在汤加开幕](/articles/voa/1013075.md)
@@ -598,6 +600,4 @@
 8-14 [波兰签约百亿美元，购买美国阿帕奇攻击直升飞机](/articles/voa/1013371.md)
 
 8-14 [巴黎奥运会两性别争议拳手夺金牌 华语圈舆论反应大不同](/articles/voa/1013372.md)
-
-8-14 [日本自民党总裁选举将如何影响中日台三角关系？](/articles/voa/1013373.md)
 
