--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-26 [中国军用飞机首次侵犯日本领空，日本紧急起飞战机应对](/articles/voa/1013070.md)
+
 8-26 [美国产业界寻求缓解拜登政府对中国大幅加征的关税](/articles/voa/1013071.md)
 
 8-26 [巴基斯坦俾路支省发生多起武装袭击事件 已造成33人死亡](/articles/voa/1013072.md)
@@ -598,6 +600,4 @@
 8-14 [孟加拉国总理哈西娜下台后，失踪持不同政见者的家人看到了亲人生还的希望](/articles/voa/1013368.md)
 
 8-14 [乌克兰：无意长期占领俄罗斯的库尔斯克地区](/articles/voa/1013369.md)
-
-8-14 [堪萨斯州曾突击查抄当地报纸的前警察局长受到重罪指控](/articles/voa/1013370.md)
 
