--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-27 [每日一语 2024.8.26](/articles/cdt/337634.md)
+
 8-27 [建设性意见｜房屋养老金一定会变成“房屋税”的，勿谓言之不预也](/articles/cdt/337637.md)
 
 8-27 [四环青年｜关于房屋养老金，还有几个问题没说清](/articles/cdt/337640.md)
@@ -10,6 +12,8 @@
 8-27 [浣花溪杜甫｜有且只有两辆油罐车混装，记者火眼金睛一下就全抓了](/articles/cdt/337646.md)
 
 8-26 [风声OPINION｜怎样把躺平的年轻人拉起来？](/articles/cdt/337648.md)
+
+8-27 [【网络民议】“这种震耳欲聋的沉默何尝不是现在这个时代的写照”](/articles/cdt/337649.md)
 
 8-26 [学问批判｜官方辟谣了吗？我还是有疑问！](/articles/cdt/337651.md)
 
@@ -596,8 +600,4 @@
 7-20 [阿罗汉有约｜坚定不移](/articles/cdt/338729.md)
 
 7-20 [城市的地得｜商洛垮桥：骄傲之余需要漫长的耐心](/articles/cdt/338731.md)
-
-7-20 [维舟｜地火在地下运行](/articles/cdt/338733.md)
-
-7-20 [CityMark城市寻踪探秘｜怎么今年雨下到哪里，事就出到哪里，陕西高速突发桥梁垮塌](/articles/cdt/338735.md)
 
