--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+8-27 [缅甸紧张局势升级，中国军队在中缅边境附近实弹演习](/articles/nyt/1042442.md)
+
+8-27 [中国军机首次侵入日本领空，自卫队战斗机发出警告](/articles/nyt/1042443.md)
+
 8-26 [7-Eleven面临收购要约，买下日本“国宝”级便利店有多难](/articles/nyt/1042444.md)
 
 8-26 [为什么欧洲人如此关注美国大选](/articles/nyt/1042445.md)
@@ -596,8 +600,4 @@
 5-23 [马斯克的外交哲学：拉拢右翼领导人，然后从中获益](/articles/nyt/1042740.md)
 
 5-23 [关税不是美国最好的武器](/articles/nyt/1042741.md)
-
-5-23 [美众议院“中国问题委员会”要求调查中国游泳队禁药事件](/articles/nyt/1042742.md)
-
-5-23 [郭文贵被控欺诈案在美国开审，涉案金额逾10亿美元](/articles/nyt/1042743.md)
 
