--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-27 [印度尼西亚举行大型多国军事演习](/articles/voa/1013047.md)
+
+8-27 [南非病患涌向停靠在开普敦的中国军队医疗船](/articles/voa/1013048.md)
+
+8-27 [应对中国灰色地带威胁,美海警机动团队赴台培训加强海巡执法能力](/articles/voa/1013049.md)
+
 8-27 [以色列最新撤离令中断了联合国在加沙的援助行动](/articles/voa/1013050.md)
 
 8-27 [西雅图机场显然因遭网络袭击而发生重大断网](/articles/voa/1013051.md)
@@ -594,10 +600,4 @@
 8-15 [外资撤离、石油需求降低 分析:中国经济短期内未见解方](/articles/voa/1013345.md)
 
 8-15 [日本议员团关心“台海有事” 愿强化日台安全交流频率](/articles/voa/1013346.md)
-
-8-14 [基里巴斯选举首轮投票开始，南太岛国亲中政策面对选民审视](/articles/voa/1013347.md)
-
-8-14 [加沙停火谈判周四恢复，加沙及西岸继续发生战斗](/articles/voa/1013348.md)
-
-8-14 [港狱中民运人士邹家成及律师因将投诉信带离监狱获刑三天及罚款](/articles/voa/1013349.md)
 
