--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-27 [加拿大将对中国电动汽车征收100%关税](/articles/nyt/1042441.md)
+
 8-27 [缅甸紧张局势升级，中国军队在中缅边境附近实弹演习](/articles/nyt/1042442.md)
 
 8-27 [中国军机首次侵入日本领空，自卫队战斗机发出警告](/articles/nyt/1042443.md)
@@ -598,6 +600,4 @@
 5-24 [中国在台湾周边展开“惩戒性”军演](/articles/nyt/1042739.md)
 
 5-23 [马斯克的外交哲学：拉拢右翼领导人，然后从中获益](/articles/nyt/1042740.md)
-
-5-23 [关税不是美国最好的武器](/articles/nyt/1042741.md)
 
