--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-27 [避免早恋和性冲动？香港建议青少年打羽毛球](/articles/nyt/1042440.md)
+
 8-27 [加拿大将对中国电动汽车征收100%关税](/articles/nyt/1042441.md)
 
 8-27 [缅甸紧张局势升级，中国军队在中缅边境附近实弹演习](/articles/nyt/1042442.md)
@@ -598,6 +600,4 @@
 5-24 [对华绿色产业贸易战，美国满盘皆输？](/articles/nyt/1042738.md)
 
 5-24 [中国在台湾周边展开“惩戒性”军演](/articles/nyt/1042739.md)
-
-5-23 [马斯克的外交哲学：拉拢右翼领导人，然后从中获益](/articles/nyt/1042740.md)
 
