--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-27 [拼多多发布第二季度财报：营收不及预期，股价暴跌逾28%](/articles/voa/1013041.md)
+
 8-27 [高技术制造推动中国7月工业利润增长](/articles/voa/1013042.md)
 
 8-27 [菲律宾称中国是地区和平的“最大破坏者”](/articles/voa/1013043.md)
@@ -598,6 +600,4 @@
 8-15 [中国当局以前所未有的力度封杀网上有关盗卖尸体丑闻的话题和讨论](/articles/voa/1013339.md)
 
 8-15 [专家：越南新领导人上任后其外交平衡“没有改变”](/articles/voa/1013340.md)
-
-8-15 [中国外长王毅会晤缅甸军政府领导人](/articles/voa/1013341.md)
 
