--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-27 [Telegram创始人被捕案：捍卫自由的英雄还是犯罪者](/articles/nyt/1042439.md)
+
 8-27 [避免早恋和性冲动？香港建议青少年打羽毛球](/articles/nyt/1042440.md)
 
 8-27 [加拿大将对中国电动汽车征收100%关税](/articles/nyt/1042441.md)
@@ -598,6 +600,4 @@
 5-24 [中国房地产救市措施为何“远远不够”](/articles/nyt/1042737.md)
 
 5-24 [对华绿色产业贸易战，美国满盘皆输？](/articles/nyt/1042738.md)
-
-5-24 [中国在台湾周边展开“惩戒性”军演](/articles/nyt/1042739.md)
 
