--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-27 [客座评论：中俄之间令人担忧的互动](/articles/dw/1024463.md)
+
+8-27 [IBM将终结在中国的研发业务](/articles/dw/1024464.md)
+
+8-27 [遭朝鲜驱逐的美国士兵将出庭认罪](/articles/dw/1024465.md)
+
 8-27 [日本指中国军机侵犯其领空 北京回应正在核实情况](/articles/dw/1024466.md)
 
 8-27 [加拿大跟進美國 對中國電動車徵100％關稅](/articles/dw/1024467.md)
@@ -594,10 +600,4 @@
 7-28 [比亚迪努力吸引奥地利零配件供应商](/articles/dw/1024761.md)
 
 7-28 [老挝从中国大量贷款 陷入债务危机的风险有多大？](/articles/dw/1024762.md)
-
-7-28 [欧洲国家为何对特朗普重返白宫疑虑重重？](/articles/dw/1024763.md)
-
-7-28 [各国向以色列提供了哪些有争议的武器？](/articles/dw/1024764.md)
-
-7-28 [巴塞罗那将提高旅游税 马略卡岛期望减少游客](/articles/dw/1024765.md)
 
