--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-27 [路透社：台湾内部报告显示中国2023年在西太平洋的军事演习耗资153亿美元](/articles/voa/1013039.md)
+
+8-27 [美国安顾问沙利文访问北京 试图管控紧张的美中关系](/articles/voa/1013040.md)
+
 8-27 [拼多多发布第二季度财报：营收不及预期，股价暴跌逾28%](/articles/voa/1013041.md)
 
 8-27 [高技术制造推动中国7月工业利润增长](/articles/voa/1013042.md)
@@ -596,8 +600,4 @@
 8-15 [泽连斯基：乌军在俄库尔斯克地区“进一步推进”](/articles/voa/1013337.md)
 
 8-15 [联合国报告指责缅甸军方犯下战争罪和危害人类罪](/articles/voa/1013338.md)
-
-8-15 [中国当局以前所未有的力度封杀网上有关盗卖尸体丑闻的话题和讨论](/articles/voa/1013339.md)
-
-8-15 [专家：越南新领导人上任后其外交平衡“没有改变”](/articles/voa/1013340.md)
 
