--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-28 [巴基斯坦总理：分离武装分子袭击旨在破坏中巴经济走廊项目](/articles/voa/1013032.md)
+
+8-28 [美印太司令帕帕罗提出：美军可以派船护送菲律宾船只运送补给](/articles/voa/1013033.md)
+
 8-27 [联邦法官叫停拜登给予公民非法移民配偶合法身份计划](/articles/voa/1013034.md)
 
 8-27 [香港民主派“47人颠覆案”成员伍健伟当庭称“无悔”，不为信仰与价值观道歉](/articles/voa/1013035.md)
@@ -596,8 +600,4 @@
 8-15 [哥伦比亚大学校长宣布辞职](/articles/voa/1013330.md)
 
 8-15 [中国7月份新房价格连续13个月下跌 工业产出增长低于预期](/articles/voa/1013331.md)
-
-8-15 [泰国宪法法院罢免总理赛塔,美国称希望“尽快”选出新总理。](/articles/voa/1013332.md)
-
-8-15 [禾赛科技据报将从五角大楼黑名单除名 美国会共和党人: “这是送给一个由中共控制的公司的礼物”](/articles/voa/1013333.md)
 
