--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-28 [中国电池厂争议中，特朗普利用反华情绪争取选票](/articles/nyt/1042434.md)
+
 8-28 [特朗普和贺锦丽都选择拥抱关税，具体政策有何不同](/articles/nyt/1042435.md)
 
 8-28 [沪式“黄昏恋”：在人民公园和宜家餐厅寻找爱情](/articles/nyt/1042436.md)
@@ -598,6 +600,4 @@
 5-27 [当人人都在讨论“脱钩”，中美经济仍然紧密相连](/articles/nyt/1042732.md)
 
 5-27 [“香港间谍案”背后，英国香港侨民群体的焦虑和担忧](/articles/nyt/1042733.md)
-
-5-27 [七国集团财长对中国廉价出口产品发出警告](/articles/nyt/1042734.md)
 
