--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-28 [制衡中国？太平洋岛国达成区域警务计划](/articles/dw/1024454.md)
+
+8-28 [盛世？危时？鸟瞰中国经济](/articles/dw/1024455.md)
+
 8-28 [沙利文或替拜习会铺路 王毅：沟通应更有建设性](/articles/dw/1024456.md)
 
 8-27 [美军护送菲律宾舰船？美印太司令官持开放态度](/articles/dw/1024457.md)
@@ -596,8 +600,4 @@
 7-29 [美媒揭中国阻多国议员赴台参与峰会 台批卑劣](/articles/dw/1024752.md)
 
 7-29 [各自解讀？菲律賓指中國曲解南海協議](/articles/dw/1024753.md)
-
-7-28 [意大利总理上任后首次访华 目标“重启”与中国的合作](/articles/dw/1024754.md)
-
-7-28 [美日加强军事合作 驻日美军指挥结构升级](/articles/dw/1024755.md)
 
