--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-28 [达赖喇嘛在美国接受膝关节置换手术后返回印度](/articles/voa/1013015.md)
+
 8-28 [美国进口中国“地沟油”将创新高 未来前景不明](/articles/voa/1013016.md)
 
 8-28 [太平洋岛国批准澳大利亚资助的2.7亿美元区域警务计划](/articles/voa/1013017.md)
@@ -598,6 +600,4 @@
 8-16 [泽连斯基：乌军全面控制苏贾镇；美国安会：初步报告显示部分俄军前线部队调往库尔斯克](/articles/voa/1013313.md)
 
 8-16 [从东南亚到太平洋 北京强化战略布局 试图建立“与美国平行的国际秩序”？](/articles/voa/1013314.md)
-
-8-16 [中国将限制锑出口，该矿物质可用于电池和武器](/articles/voa/1013315.md)
 
