--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-28 [那些原本是废话的常识｜给一岁孩子“立规矩”，印证丛林社会遍地怂人](/articles/cdt/337597.md)
+
+8-28 [旧闻评论｜公众对政策的误解从来不是问题](/articles/cdt/337599.md)
+
 8-28 [【404视频】章北海official｜互联网不信任网证网号，历史记住河南红码](/articles/cdt/337602.md)
 
 8-28 [人物｜当AI入侵大学论文](/articles/cdt/337607.md)
@@ -596,8 +600,4 @@
 7-22 [【404文库】SoarNewSMTH｜陕西S30水阳高速严坪村2号大桥垮塌过程推测](/articles/cdt/338696.md)
 
 7-22 [每日一语 2021.7.21](/articles/cdt/338699.md)
-
-7-22 [莽莽｜失语中国：被噤声的公共知识分子们](/articles/cdt/338701.md)
-
-7-22 [刑辩昊宸｜我从未见过一次正常的指居](/articles/cdt/338703.md)
 
