--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-28 [全球科技集群排名：中国连续两年数量最多](/articles/dw/1024453.md)
+
 8-28 [制衡中国？太平洋岛国达成区域警务计划](/articles/dw/1024454.md)
 
 8-28 [盛世？危时？鸟瞰中国经济](/articles/dw/1024455.md)
@@ -598,6 +600,4 @@
 7-29 [普京警告：美在德部署导弹或引发新冷战危机](/articles/dw/1024751.md)
 
 7-29 [美媒揭中国阻多国议员赴台参与峰会 台批卑劣](/articles/dw/1024752.md)
-
-7-29 [各自解讀？菲律賓指中國曲解南海協議](/articles/dw/1024753.md)
 
