--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-28 [金正恩监督新型多管火箭发射器试验](/articles/dw/1024450.md)
+
+8-28 [香港“47人”案：“长毛”梁国雄等人毋怨成为阶下囚](/articles/dw/1024451.md)
+
+8-28 [基辅：第二次乌克兰和平峰会应在全球南方国家举行](/articles/dw/1024452.md)
+
 8-28 [全球科技集群排名：中国连续两年数量最多](/articles/dw/1024453.md)
 
 8-28 [制衡中国？太平洋岛国达成区域警务计划](/articles/dw/1024454.md)
@@ -594,10 +600,4 @@
 7-29 [美国总统大选：哈里斯团队一周内筹得两亿美元捐款](/articles/dw/1024748.md)
 
 7-29 [梅洛尼会晤习近平 称北京为“重要对话方”](/articles/dw/1024749.md)
-
-7-29 [德国“国民面包”碱水结是谁发明的？](/articles/dw/1024750.md)
-
-7-29 [普京警告：美在德部署导弹或引发新冷战危机](/articles/dw/1024751.md)
-
-7-29 [美媒揭中国阻多国议员赴台参与峰会 台批卑劣](/articles/dw/1024752.md)
 
