--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-28 [镜相｜复盘“小红书病”：焦虑、恐惧和“小红书味”](/articles/cdt/337595.md)
+
 8-28 [那些原本是废话的常识｜给一岁孩子“立规矩”，印证丛林社会遍地怂人](/articles/cdt/337597.md)
 
 8-28 [旧闻评论｜公众对政策的误解从来不是问题](/articles/cdt/337599.md)
@@ -598,6 +600,4 @@
 7-22 [南方人物周刊｜一名公认的好医生，在午休时间加班时被杀](/articles/cdt/338682.md)
 
 7-22 [【404文库】SoarNewSMTH｜陕西S30水阳高速严坪村2号大桥垮塌过程推测](/articles/cdt/338696.md)
-
-7-22 [每日一语 2021.7.21](/articles/cdt/338699.md)
 
